/* English */ wikifix for Khmer translation <division#51157672>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -275,7 +275,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Icelandic: {{t+|is|herdeild|f}}, {{t+|is|deild|f}}
 * Indonesian: {{t+|id|divisi}}
 * Japanese: {{t+|ja|師団|tr=しだん, shidan}}
-* Khmer: {{t|km|កងពលធំ}
+* Khmer: {{t|km|កងពលធំ}}
 {{trans-mid}}
 * Korean: {{t+|ko|사단}}
 * Kurdish:
