--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -71,6 +71,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Hebrew: {{t+|he|גִּירִית|f|tr=girit}}
 * Hindi: {{t+|hi|बिज्जू|m}}
 * Hungarian: {{t+|hu|borz}}
+* Hunsrik: {{t|hrx|Dachs|m}}
 * Icelandic: {{t|is|greifingi|m}}
 * Ido: {{t+|io|daxo}}
 * Indonesian: {{t|id|biul}}
