--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -1,7 +1,8 @@
 {{also|Badger}}
+{{slim-wikipedia|Badger (disambiguation)}}
 ==English==
 {{was wotd|2009|August|7}}
-{{slim-wikipedia|Badger (disambiguation)}}
+
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|/ˈbædʒə/|lang=en}}
@@ -11,7 +12,6 @@
 
 ===Etymology 1===
 From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, referring to the animal's badge-like white blaze, equivalent to {{af|en|badge|-ard|nocat=1}}.
-{{wikipedia}}
 
 ====Noun====
 [[Image:Meles meles MHNT.jpg|thumb|A badger]]
@@ -163,6 +163,11 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * {{l|en|meline}}
 * {{l|en|sett}}, {{l|en|set}}
 * {{l|en|Appendix: Animals}}
+
+====References====
+* {{pedia}}
+* {{specieslite|Mustelidae}}
+* {{comcatlite|Mustelidae}}
 
 ====Verb====
 {{en-verb|badgers|badgering|badgered}}
