--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -3,7 +3,6 @@
 ==English==
 {{was wotd|2009|August|7}}
 
-
 ===Pronunciation===
 * {{a|RP}} {{IPA|/ˈbædʒə/|lang=en}}
 * {{a|GenAm}} {{IPA|/ˈbædʒɚ/|lang=en}}
@@ -14,7 +13,7 @@
 From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, referring to the animal's badge-like white blaze, equivalent to {{af|en|badge|-ard|nocat=1}}.
 
 ====Noun====
-[[Image:Meles meles MHNT.jpg|thumb|A badger]]
+[[Image:Meles meles MHNT.jpg|thumb|a [[Eurasian badger]]]]
 {{en-noun}}
 
 # Any [[mammal]] of three subfamilies, which belong to the family [[Mustelidae]]: [[Melinae]] (Eurasian badgers), [[Mellivorinae]] ([[ratel]] or [[honey badger]]), and {{taxlink|Taxideinae|subfamily|noshow=1|ver=161103}} ([[American badger]]).
