--- a/en/l/lounger.776078.wikitext
+++ b/en/l/lounger.776078.wikitext
@@ -10,6 +10,15 @@
 # One who [[lounge]]s; an [[idler]].
 # A chair made for [[lounge|lounging]].
 
+====Coordinate terms====
+{{sense|chair}}
+* {{l|en|recliner}}
+* {{l|en|lazyboy}}
+* {{l|en|barcalounger}}
+
+====Derived terms====
+* {{l|en|barcalounger}}
+
 ====Translations====
 {{trans-top|chair}}
 * Italian: {{t|it|lettino da spiaggia|m}}, {{t|it|lettino|m}}
