--- a/en/d/DWB.741869.wikitext
+++ b/en/d/DWB.741869.wikitext
@@ -1,15 +1,13 @@
 {{also|dWb}}
-
 ==English==
 
 ===Etymology===
 * {{sense|Driving while black}} Coined in analogy to drunk driving's "DWI"
 
-===Initialism===
-{{rfc-header|Initialism}}
-{{head|en|initialism}}
+===Phrase===
+{{en-phrase}}
 
-# [[driving|Driving]] while [[black]] (or [[brown]]), a [[sarcastic]] reference to [[racial profiling]] by police investigating driving offences.
+# {{initialism of|[[driving]] while [[black]] (or [[brown]])|lang=en|dot=}}: a [[sarcastic]] reference to [[racial profiling]] by police investigating driving offences.
 
 ====Related terms====
 * {{l|en|DWI}} {{gloss|driving while intoxicated}}
