--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -5,6 +5,7 @@
 * {{IPA|/kɹʊk/|lang=en}}
 * {{a|obsolete}} {{IPA|/kɹuːk/|lang=en}}<ref>{{cite-book|author=John Walker|title=A critical pronouncing dictionary|url=https://books.google.co.nz/books?id=9OsIAAAAQAAJ|archiveurl=|archivedate=|year=1824|page=149}}</ref>
 * {{audio|en-us-crook.ogg|Audio (US)|lang=en}}
+* {{audio|EN-AU ck1 crook.ogg|Audio (AU)|lang=en}}
 * {{rhymes|ʊk|lang=en}}
 
 ===Etymology 1===
