--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -91,12 +91,13 @@ From {{inh|en|enm|dame}}, {{m|enm|dam||(term of address or title of a) woman of 
 ==Afrikaans==
 
 ===Etymology===
-From {{inh|af|nl|dame}}.
+From {{inh|af|nl|dame}}, from {{inh|af|dum|dame}}, from {{der|af|frm|dame}}, from {{der|af|fro|dame}}, from {{der|af|la|domina}}.
 
 ===Noun===
 {{af-noun|s}}
 
 # [[lady]]
+
 ----
 
 ==Danish==
