--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -151,7 +151,7 @@ From {{inh|nl|dum|dame}}, from {{der|nl|frm|dame}}, from {{der|nl|fro|dame}}, fr
 # {{l|en|lady}}
 ## {{l|en|noblewoman}}
 ## {{n-g|Polite term or title of address for any (adult or adolescent) woman.}}
-# {{lb|nl|chess}} {{l|en|queen}}
+# {{lb|nl|chess|card games}} {{l|en|queen}}
 #: {{syn|nl|koningin}}
 
 ====Derived terms====
