--- a/en/s/soldados.855915.wikitext
+++ b/en/s/soldados.855915.wikitext
@@ -1,3 +1,12 @@
+==English==
+
+===Noun===
+{{head|en|noun plural form}}
+
+# {{plural of|soldado|lang=en}}
+
+----
+
 ==Portuguese==
 
 ===Adjective===
