--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -49,7 +49,7 @@ The word is sometimes considered to come from an {{cog|xno|-}} derivative of {{c
 * Irish: {{t|ga|luch chodlamáin|f}}, {{t|ga|dallóg fhéir|f}}
 * Italian: {{t+|it|ghiro|m}}, {{t+|it|moscardino|m}}
 * Japanese: {{t|ja|ヤマネ|tr=yamane}}
-* Ladin: {{t|lld|ghiro}}
+* Ladin: {{t|lld|ghiro|m}}
 * Latin: {{t|la|glis|m}}
 {{trans-mid}}
 * Latvian: {{t|lv|susuris}}
@@ -58,12 +58,12 @@ The word is sometimes considered to come from an {{cog|xno|-}} derivative of {{c
 * Maltese: {{t|mt|ġurdien ta’ denbu pjuma}}
 * Navajo: {{t|nv|yéigo ałhoshii}}
 * Norwegian: {{t|no|syvsover}}, {{t|no|sovemus}}
-* Occitan: {{t+|oc|missara}}, {{t|oc|greule}}
+* Occitan: {{t+|oc|missara|f}}, {{t|oc|greule}}
 * Polish: {{t|pl|popielica|f}}
 * Portuguese: {{t+|pt|arganaz|m}}
 * Romani: {{t|rom|xurtso|m}}, {{t|rom|xurtsaika|f}}
 * Romanian: {{t|ro|șoarece de pădure}}
-* Romansch: {{t|rm|durmigliet}}
+* Romansch: {{t|rm|durmigliet|m}}, {{t|rm|glirida|f}}
 * Russian: {{t+|ru|со́ня|f}}
 * Sardinian: {{t|sc|topi de venadroxu}}, {{t|sc|medrona de tzirva}}
 * Scottish Gaelic: {{t|gd|dallag|f}}
