--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -58,6 +58,6 @@ From {{etyl|sa|ms}} {{m|sa|भाषा||language}}.
 * {{desc|id|bahasa}}
 ** {{desc|bor=1|nl|bahasa}}
 ** {{desc|bor=1|en|Bahasa}} {{i|with Malay {{l|ms|bahasa}}}}
-
+* {{desc|mfa|sc=Arab|بهاس|tr=bahasa}}
 
 [[Category:ms:Language]]
