t+sq:[[në]] t-balance ([[WT:EDIT|Assisted]]) <at#51203420>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -78,6 +78,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 
 =====Translations=====
 {{trans-top|in or very near a particular place}}
+* Albanian: {{t|sq|në}}
 * Arabic: {{t|ar|عِنْد}}
 *: Egyptian Arabic: {{t|arz|عند|tr=ʿand}}
 * Belarusian: {{t|be|у}} / {{t|be|ў}}, {{t|be|пры}}, {{t|be|каля́}}
@@ -112,8 +113,8 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 *: Northern Kurdish: {{t+|kmr|li}}
 * Lao: {{t|lo|ທີ່}}
 * Latgalian: {{t|ltg|pi}}
-* Latin: ''[[dative case]]'', {{t+|la|in}}
 {{trans-mid}}
+* Latin: ''[[dative case]]'', {{t+|la|in}}
 * Latvian: {{t|lv|pie}}
 * Macedonian: {{t|mk|во}}, {{t|mk|на}}, {{t|mk|кај}}, {{t|mk|при}}
 * Malay: {{t|ms|di}}
