--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -199,6 +199,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 {{trans-bottom}}
 
 {{trans-top|in the direction of}}
+* Albanian: {{t|sq|në}}
 * Arabic: {{t|ar|صَوْب}}
 *: Egyptian Arabic: {{t|arz|ناحية|tr=naḥyet}}
 * Bulgarian: {{t+|bg|при|sc=Cyrl}}, {{t+|bg|на|sc=Cyrl}}, {{t|bg|по врѐме на|sc=Cyrl}}
@@ -218,8 +219,8 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Irish: {{t|ga|ag}}
 * Italian: {{t+|it|a}}
 * Japanese: {{t+|ja|に|tr=...ni|alt=...に}}, {{t+|ja|を|tr=...o|alt=...を}}
-* Korean: {{t+|ko|에게|alt=...에게}}, {{t+|ko|로|alt=...로}}, {{t|ko|에게로|alt=...에게로}}
 {{trans-mid}}
+* Korean: {{t+|ko|에게|alt=...에게}}, {{t+|ko|로|alt=...로}}, {{t|ko|에게로|alt=...에게로}}
 * Kurdish:
 *: Central Kurdish: {{t|ckb||tr=le}}
 *: Northern Kurdish: {{t+|kmr|li}}
