--- a/en/c/cardiomyocyte.741586.wikitext
+++ b/en/c/cardiomyocyte.741586.wikitext
@@ -11,10 +11,11 @@
 
 ====Translations====
 {{trans-top|cardiac muscle cell}}
+* Czech: {{t|cs|kardiomyocyt|m}}
+{{trans-mid}}
 * Norwegian:
 *: Bokmål: {{t+|nb|hjertemuskelcelle|f}}
 *: Nynorsk: {{t|nn|hjartemuskelcelle|f}}
-{{trans-mid}}
 {{trans-bottom}}
 
 ===Anagrams===
