--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -144,6 +144,7 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 * Catalan: {{t+|ca|penyora|f}}, {{t+|ca|garantia|f}}
 * Finnish: {{t+|fi|pantti}}
 * Greek: {{t+|el|ενέχυρο|n}}
+*: Ancient: {{t|grc|ῥύσιον|n}}
 * Hungarian: {{t+|hu|zálog}}
 * Italian: {{t+|it|avallo|m}}, {{t+|it|garanzia|f}}
 * Maori: {{t|mi|tāmana}}
