Adding EN-AU audio file: public school <public school#51214813>

--- a/en/p/public school.34050.wikitext
+++ b/en/p/public school.34050.wikitext
@@ -8,6 +8,9 @@
 ===Etymology===
 From {{m|en|public}} (originally, "[[communal]]" and contrasted with [[personal]] [[tutor]]s; later, "[[state]]-run" and contrasted with [[private school]]s) + {{m|en|school}}.
 
+===Pronunciation===
+* {{audio|en-au-public school.ogg|Audio (AU)|lang=en}}
+
 ===Noun===
 {{en-noun}}
 
