--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -149,6 +149,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Norwegian:
 *: Bokmål: {{t+|nb|vekt|m|f}}
 * Occitan: {{t+|oc|pes|m}}
+* Old English: {{t|ang|ġewiht|n}}
 * Persian: {{t+|fa|وزن|tr=vazn|sc=fa-Arab}}
 * Polish: {{t+|pl|ciężar|m}}, {{t+|pl|waga|f}}
 * Portuguese: {{t+|pt|peso}}
@@ -202,6 +203,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Latvian: {{t|lv|svars|m}}, {{t|lv|atsvars|m}}
 * Luxembourgish: {{t|lb|Gewiicht|n}}
 * Maori: {{t|mi|tāwē}} {{qualifier|to add to an anchor}}, {{t|mi|wēti}}, {{t|mi|taumaha}}, {{t|mi|toimaha}}
+* Old English: {{t|ang|ġewiht|n}}
 * Portuguese: {{t+|pt|peso}}
 * Romanian: {{t+|ro|greutate|f}}
 * Russian: {{t+|ru|груз|m}}
@@ -225,6 +227,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 {{trans-mid}}
 * Korean: {{t+|ko|체중}}
 * Maori: {{t|mi|maihea}}
+* Old English: {{t|ang|ġewiht|n}}
 * Persian: {{t+|fa|وزنه|tr=vazne|sc=fa-Arab}}
 * Portuguese: {{t+|pt|peso|m}}
 * Russian: {{t+|ru|ги́ря|f}}
