--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -37,7 +37,7 @@ From {{etyl|fro|en}} {{m|fro|consumpcion}}, from {{etyl|la|en}} {{m|la|consumpti
 * Czech: {{t+|cs|spotřeba|f}}, {{t|cs|zničení|n}}
 * Dutch: {{t+|nl|consumptie|f}}, {{t+|nl|verbruik|n}}
 * Finnish: {{t+|fi|kuluttaminen}}, {{t+|fi|kulutus}}
-* French: {{t+|fr|consommation}}, {{t+|fr|consommer|m}}, {{t+|fr|consumer|m}}
+* French: {{t+|fr|consommation}}
 * Galician: {{t|gl|consumo|m}}
 * Georgian: {{t|ka|მოხმარება|sc=Geor}}
 * German: {{t+|de|Konsum|m}}, {{t+|de|Verzehr|m}}, {{t+|de|Verbrauch|m}}, {{t+|de|Aufnahme|f}}
