--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -312,7 +312,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Igbo: {{t-needed|ig}}
 * Indonesian: {{t-needed|id}}
 * Irish: {{t-needed|ga}}
-* Italian: {{t-needed|it}}
+* Italian: {{t+|it|a}}, {{t+|it|di}}
 * Korean: {{t+|ko|에|alt=...에}}
 * Ladin: {{t-needed|lld}}
 {{trans-mid}}
