--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -345,7 +345,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Dutch: {{t-needed|nl}}
 * Estonian: {{t-needed|et}}
 * Faroese: {{t-needed|fo}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|-ssa}}, {{t+|fi|-ssä}} {{qualifier|inessive case}}
 * French: {{t-needed|fr}}
 * German: {{t-needed|de}}
 * Greek: {{t-needed|el}}
