t+es:[[putrefacción]] t+es:[[podre]] ([[WT:EDIT|Assisted]]) <rot#51235294>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -120,6 +120,7 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 {{trans-top|process of becoming rotten}}
 * Latin: {{t|la|cariēs|f}}
 {{trans-mid}}
+* Spanish: {{t+|es|putrefacción}}, {{t+|es|podre}}
 {{trans-bottom}}
 
 
