Adding EN-AU audio file: dame <dame#51242692>

--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -9,6 +9,7 @@ From {{inh|en|enm|dame}}, {{m|enm|dam||(term of address or title of a) woman of 
 
 ===Pronunciation===
 * {{a|RP|GA}} {{IPA|/deɪm/|lang=en}}
+* {{audio|en-au-dame.ogg|Audio (AU)|lang=en}}
 * {{rhymes|eɪm|lang=en}}
 
 ===Noun===
