--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -22,6 +22,7 @@
 *: Mandarin: {{t+|cmn|戰俘|sc=Hani}}, {{t+|cmn|战俘|tr=zhànfú|sc=Hani}}, {{t+|cmn|俘虜|sc=Hani}}, {{t+|cmn|俘虏|tr=fúlǔ|sc=Hani}}
 * Czech: {{t+|cs|zajatec|m}}, {{t|cs|válečný zajatec|m}}
 * Dutch: {{t+|nl|krijgsgevangene|m|f}}, {{t|nl|oorlogsgevangene|m|f}}
+* Faroese: {{t|fo|krígsfangi|m}}
 * Finnish: {{t+|fi|sotavanki}}
 * French: {{t+|fr|prisonnier de guerre|m}}
 * Georgian: {{t|ka|სამხედრო ტყვე}}
@@ -33,8 +34,8 @@
 * Interlingua: {{t|ia|prisionero de guerra}}
 * Italian: {{t|it|prigioniero di guerra|m}}
 * Japanese: {{t+|ja|捕虜|tr=ほりょ, horyo|sc=Jpan}}
-* Korean: {{t|ko|전쟁 포로}}
 {{trans-mid}}
+* Korean: {{t|ko|전쟁 포로}}
 * Latin: {{t|la|dediticius|m}}
 * Malay: {{t|ms|tahanan perang}}
 * Navajo: {{t|nv|yisnááh}}
