--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -351,7 +351,7 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 * Lithuanian: {{t-needed|lt}}
 * Macedonian: {{t|mk|остров|m}}
 * Maltese: {{t-needed|mt}}
-* Norwegian: {{t+|no|øy|m|f}}
+* Norwegian:
 *: Bokmål: {{t+|nb|øy|m|f}}
 *: Nynorsk: {{t|nn|øy|m|f}}
 * Polish: {{t+|pl|wyspa|f}}
