t+it:[[isolare]] t-balance ([[WT:EDIT|Assisted]]) <island#51254775>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -414,6 +414,7 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 {{trans-top|isolate}}
 * Dutch: {{t+|nl|afsluiten}}, {{t+|nl|afzonderen}}, {{t+|nl|isoleren}}
 * Greek: {{t+|el|απομονώνω|sc=Grek}}
+* Italian: {{t+|it|isolare}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|isolar}}
 * Russian: {{t+|ru|изоли́ровать}}, {{t+|ru|отделя́ть|impf}}, {{t+|ru|отдели́ть|pf}}, {{t+|ru|обособля́ть|impf}}, {{t+|ru|обосо́бить|pf}}
