--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -402,22 +402,27 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 
 ====Translations====
 {{trans-top|make into an island}}
-* Italian: {{t|it|[[trasformare]] [[in]] [[un]] [[isola]]}}
+* Greek: {{t-needed|el}}
+*: Ancient: {{t-needed|grc}}
 {{trans-mid}}
+* Italian: {{t|it|[[trasformare]] [[in]] [[un]] [[isola]]}}
 * Portuguese: {{t+|pt|ilhar}}
 {{trans-bottom}}
 
 {{trans-top|set, dot (as if) with islands}}
-* Italian: {{t-needed|it}}
+* Greek: {{t-needed|el}}
+*: Ancient: {{t-needed|grc}}
 {{trans-mid}}
+* Italian: {{t-needed|it}}
 * Russian: {{t+|ru|покрыва́ть|impf}}, {{t+|ru|покры́ть|pf}} (''островками''), {{t+|ru|усе́ивать|impf}}, {{t+|ru|усе́ять|pf}} (''островками'')
 {{trans-bottom}}
 
 {{trans-top|isolate}}
 * Dutch: {{t+|nl|afsluiten}}, {{t+|nl|afzonderen}}, {{t+|nl|isoleren}}
 * Greek: {{t+|el|απομονώνω|sc=Grek}}
-* Italian: {{t+|it|isolare}}
+*: Ancient: {{t-needed|grc}}
 {{trans-mid}}
+* Italian: {{t+|it|isolare}}
 * Portuguese: {{t+|pt|isolar}}
 * Russian: {{t+|ru|изоли́ровать}}, {{t+|ru|отделя́ть|impf}}, {{t+|ru|отдели́ть|pf}}, {{t+|ru|обособля́ть|impf}}, {{t+|ru|обосо́бить|pf}}
 {{trans-bottom}}
