--- a/en/m/mouflon.8242.wikitext
+++ b/en/m/mouflon.8242.wikitext
@@ -16,7 +16,7 @@ Borrowed from {{bor|en|fr|mouflon}}, from {{cog|it|muflone}}.  From 1765-75.
 ===Noun===
 {{en-noun}}
 
-# A [[species]] of wild [[sheep]], {{taxlink|Ovis orientalis musimon|subspecies|noshow=1|ver=161026}}, syn. {{taxlink|Ovis aries musimon|subspecies|noshow=1|ver=161026}}, endemic to [[Sardinia]] and [[Corsica]]. {{defdate|From 1765-75.}}
+# A [[species]] of wild [[sheep]], {{taxlink|Ovis orientalis musimon|subspecies|noshow=1|ver=161026}}, syn. {{taxlink|Ovis aries musimon|subspecies|noshow=1|ver=161026}}, endemic to [[Sardinia]] and [[Corsica]]. {{defdate|from c. 1770}}
 
 ====Translations====
 {{trans-top|sheep}}
