--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -60,6 +60,7 @@ From {{etyl|enm|en}} {{m|enm|thaugh}}, {{m|enm|thagh|}}, from {{etyl|ang|en}} {{
 * Swahili: {{t|sw|ijapokuwa}}, {{t|sw|hata hivyo}}
 * Swedish: {{t+|sv|dock}}
 * Ukrainian: {{t|uk|тим не менш|tr=tym ne mensh|sc=Cyrl}}
+* Urdu: {{t|ur|گرچہ}}
 * Volapük: [[do#Volapük|do]]
 * Walloon: {{t+|wa|portant}}
 * Zazaki: {{t|zza|bo zi}}
