Adding EN-AU audio file: moon shot <moon shot#51258166>

--- a/en/m/moon shot.720228.wikitext
+++ b/en/m/moon shot.720228.wikitext
@@ -8,6 +8,7 @@
 
 * {{a|RP}} {{IPA|/ˈmuːn ʃɒt/|lang=en}}
 * {{a|GA}} {{IPA|/ˈmuːn ʃɑt/|lang=en}}
+* {{audio|en-au-moon shot.ogg|Audio (AU)|lang=en}}
 
 ===Noun===
 {{en-noun}}
