t+fr:[[à]] ([[WT:EDIT|Assisted]]) <at#51260411>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -346,7 +346,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Estonian: {{t-needed|et}}
 * Faroese: {{t-needed|fo}}
 * Finnish: {{t+|fi|-ssa}}, {{t+|fi|-ssä}} {{qualifier|inessive case}}; {{qualifier|+ genitive}} {{t|fi|parissa}}
-* French: {{t-needed|fr}}
+* French: {{t+|fr|à}}
 * German: {{t-needed|de}}
 * Greek: {{t-needed|el}}
 * Greek: Ancient Greek: {{t-needed|grc}}
