t+hu:[[akkori]] t-balance t+hu:[[utána]] t+hu:[[másfelől]] t+hu:[[másrészt]] ([[WT:EDIT|Assisted]]) <then#51261538>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -145,7 +145,7 @@ From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{et
 * German: {{t+|de|dann}}, {{t+|de|danach}}, {{t+|de|anschließend}}
 * Hebrew: {{t|he|אחר כך|tr=akhar-kakh}}
 * Hindi: {{t+|hi|फिर|tr=phir|sc=Deva}}
-* Hungarian: {{t+|hu|aztán}}, {{t+|hu|azután}}, {{t+|hu|majd}}
+* Hungarian: {{t+|hu|aztán}}, {{t+|hu|azután}}, {{t+|hu|majd}}, {{t+|hu|utána}}
 * Ido: {{t+|io|lore}}
 * Irish: {{t|ga|i ndiadh sin}}
 * Istriot: {{t|ist|puoi}}
@@ -160,8 +160,8 @@ From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{et
 * Macedonian: {{t|mk|потоа|tr=potoa|sc=Cyrl}}
 * Malay: {{t|ms|tidak lama kemudian}}
 * Maltese: {{t|mt|mbagħad|tr=mbaʕad}}
-* Maori: {{t|mi|kātahi}}
 {{trans-mid}}
+* Maori: {{t|mi|kātahi}}
 * Mongolian: {{t-needed|mn}}
 * Norwegian: {{t+|no|så}}, {{t+|no|deretter}}, {{t+|no|siden}}
 * Novial: {{t|nov|tand}}
@@ -298,11 +298,11 @@ From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{et
 * French: {{t+|fr|cependant}}, {{t+|fr|en même temps}}
 * Georgian: {{t-needed|ka}}
 * German: {{t+|de|genauso}}, {{t+|de|gleichermaßen}}
-* Hungarian: {{t+|hu|ugyanakkor}}, {{t+|hu|viszont}}
+* Hungarian: {{t+|hu|ugyanakkor}}, {{t+|hu|viszont}}, {{t+|hu|másfelől}}, {{t+|hu|másrészt}}
 * Italian: {{t|it|allo stesso tempo}}
 * Japanese: {{t|ja|そのとき|tr=sono toki}}
-* Kurdish: li [[mil|milê]] din, [[li]] [[alî]] [[dî]]
 {{trans-mid}}
+* Kurdish: li [[mil|milê]] din, [[li]] [[alî]] [[dî]]
 * Latin: {{t|la|contra ea}}, {{t|la|alioqui}}, {{t+|la|autem}}
 * Lithuanian: {{t|lt|tada}}
 * Norwegian: {{t+|no|da}}
@@ -334,11 +334,12 @@ From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{et
 * Esperanto: {{t|eo|tiama}}
 * Finnish: {{t+|fi|silloinen}}
 * German: {{t+|de|damalig}}
+* Hungarian: {{t+|hu|akkori}}
 * Japanese: {{t+|ja|当時|tr=touji}}, {{t|ja|そのとき|tr=sono toki}}, {{t|ja|その時点|tr=sono jiten}}
+{{trans-mid}}
 * Norwegian:
 *: Bokmål: {{t|nb|daværende}}
 *: Nynorsk: {{t|nn|dåværande}}
-{{trans-mid}}
 * Portuguese: {{t|pt|de então}}
 * Russian: {{t+|ru|тогда́шний}}
 * Spanish: {{t|es|de entonces}}
