Adding EN-AU audio file: vote with one's feet <vote with one's feet#51263933>

--- a/en/v/vote with one's feet.774902.wikitext
+++ b/en/v/vote with one's feet.774902.wikitext
@@ -2,6 +2,9 @@
 {{was wotd|2010|May|28}}
 {{wikipedia|Foot voting}}
 
+===Pronunciation===
+* {{audio|en-au-vote with one's feet.ogg|Audio (AU)|lang=en}}
+
 === Verb ===
 {{head|en|verb|head=[[vote]] [[with]] [[one]][['s]] [[feet]]}}
 
