t+hu:[[normális]] t+hu:[[épeszű]] t+hu:[[épelméjű]] t+hu:[[eszénél van]] ([[WT:EDIT|Assisted]]) <in one's right mind#51266084>

--- a/en/i/in one's right mind.775705.wikitext
+++ b/en/i/in one's right mind.775705.wikitext
@@ -28,6 +28,7 @@
 ====Translations====
 {{trans-top|sane}}
 * Finnish: {{t|fi|järjissään}}
+* Hungarian: {{t+|hu|normális}}, {{t|hu|épeszű}}, {{t+|hu|épelméjű}}, {{t|hu|eszénél van}}
 * Russian: {{t|ru|в здра́вом уме́}} {{qualifier|in healthy/sound mind}}, {{t|ru|в своём уме́}} {{qualifier|in one's (own) mind}}
 {{trans-mid}}
 * Spanish: {{t|es|en sus cabales}}
