--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -64,7 +64,7 @@
 * Norman: {{t|nrf|futhet|m}}
 * Norwegian: {{t|no|frett}}
 * Occitan: {{t+|oc|fura}}
-* Persian: {{t+|fa|راسو|tr=rāsū}}
+* Persian: {{t+|fa|راسو|tr=rāsū}}, {{t+|fa|قاقم|tr=qāqom}}
 * Polish: {{t+|pl|fretka|f}}
 * Portuguese: {{t+|pt|furão|m}}
 * Quechua: {{t|qu|manqu}}
