t+ckb:[[گوڵەکەلەم]] t+kmr:[[gulkelem]] ([[WT:EDIT|Assisted]]) <cauliflower#51272230>

--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -61,6 +61,9 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Japanese: {{t+|ja|カリフラワー|tr=karifurawā}}, {{t|ja|花野菜|tr=hanayasai}}, {{t|ja|花甘藍|tr=hanakanran}}, {{t|ja|花キャベツ|tr=hanakyabetsu}}
 {{trans-mid}}
 * Korean: {{t|ko|꽃양배추|tr=kkotyangbaechu}}
+* Kurdish:
+*: Central Kurdish: {{t|ckb|گوڵەکەلەم}}
+*: Northern Kurdish: {{t+|kmr|gulkelem}}
 * Latvian: {{t|lv|ziedkāposts|m}}
 * Lithuanian: {{t|lt|žiedinis kopūstas|m}}, {{t|lt|žiedbastučiai|m-p}}
 * Macedonian: {{t|mk|карфио́л|m}}
