--- a/en/p/priors.746912.wikitext
+++ b/en/p/priors.746912.wikitext
@@ -4,3 +4,12 @@
 {{head|en|noun plural form}}
 
 # {{plural of|prior|lang=en}}
+
+----
+
+==Catalan==
+
+===Noun===
+{{head|ca|noun form}}
+
+# {{plural of|prior|lang=ca}}
