Adding EN-AU audio file: bitter pill to swallow <bitter pill to swallow#51283630>

--- a/en/b/bitter pill to swallow.855106.wikitext
+++ b/en/b/bitter pill to swallow.855106.wikitext
@@ -3,6 +3,9 @@
 ===Alternative forms===
 * [[bitter pill]]
 
+===Pronunciation===
+* {{audio|en-au-bitter pill to swallow.ogg|Audio (AU)|lang=en}}
+
 ===Noun===
 {{en-noun|head=[[bitter pill]] [[to]] [[swallow]]|bitter pills to swallow}}
 
