Adding EN-AU audio file: but seriously folks <but seriously folks#51284007>

--- a/en/b/but seriously folks.803515.wikitext
+++ b/en/b/but seriously folks.803515.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+===Pronunciation===
+* {{audio|en-au-but seriously folks.ogg|Audio (AU)|lang=en}}
+
 ===Interjection===
 {{en-interj}}
 
