--- a/en/n/no kidding.742290.wikitext
+++ b/en/n/no kidding.742290.wikitext
@@ -16,7 +16,7 @@
 *: Cantonese: {{t|yue|講真|alt=講真？！|sc=Hant}}, {{t|yue|讲真|alt=讲真？！|tr=gong2 zan1?!|sc=Hant}}
 *: Mandarin: {{t+|cmn|當真|alt=當真？！|sc=Hani}}, {{t+|cmn|当真|tr=dàngzhēn?!|alt=当真？！|sc=Hani}}, {{t|cmn|[[不]][[會]][[吧]]？|sc=Hani}}, {{t|cmn|[[不]][[会]][[吧]]？|tr=bù huì ba?|sc=Hani}}
 * Finnish: {{t|fi|ihanko totta}}, {{t|fi|ei kai}}
-* French: {{t+|fr|sans blague}}
+* French: {{t+|fr|sans blague}}, {{t+|fr|la vache}}
 * German: {{qualifier|colloquial|vulgar}} {{t|de|ohne Scheiß}}, {{qualifier|colloquial}} {{t|de|im Ernst}}, {{t+|de|echt}}
 {{trans-mid}}
 * Italian: {{t+|it|sul serio}}, {{t+|it|seriamente}}, {{t|it|scherzi a parte}}, {{t|it|ma dai}}, {{t|it|non dirmi}}
@@ -31,7 +31,7 @@
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
 * Finnish: {{t|fi|ihanko totta}}, {{t|fi|ei kai}}
-* French: {{t-needed|fr}}
+* French: {{t|fr|sans blaque}}
 {{trans-mid}}
 * German: {{t-needed|de}}
 * Italian: {{t|it|eh si}}, {{t|it|eh già}}, {{t|it|proprio così}}
