--- a/en/n/no kidding.742290.wikitext
+++ b/en/n/no kidding.742290.wikitext
@@ -31,7 +31,7 @@
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
 * Finnish: {{t|fi|ihanko totta}}, {{t|fi|ei kai}}
-* French: {{t+|fr|sans blague}}
+* French: {{t+|fr|sans blague}}, {{t|fr|sans dec'}}
 {{trans-mid}}
 * German: {{t-needed|de}}
 * Italian: {{t|it|eh si}}, {{t|it|eh già}}, {{t|it|proprio così}}
