--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -77,7 +77,7 @@ From {{inh|en|enm|croke}}, {{m|enm|crok}}, from {{inh|en|ang|*crōc|t=hook, bend
 * Spanish: {{t+|es|ladrón|m}}, {{t+|es|ladrona|f}}, {{t+|es|ratero|m}}, {{t+|es|ratera|f}}, {{t+|es|truhán|m}}, {{t+|es|truhana|f}}, {{t+|es|maleante}}
 {{trans-bottom}}
 
-{{trans-top|a staff with a hook at one end, particularly one used by shepherds}}
+{{trans-top|a shepherd's crook}}
 * Bulgarian: {{t+|bg|гега|f}}
 * Finnish: {{t|fi|käyräsauva}}
 * French: {{t+|fr|houlette|f}}
