t+hu:[[bár]] t+hu:[[noha]] t+hu:[[habár]] t+hu:[[jóllehet]] t+hu:[[ámbár]] t+hu:[[azért]] t+hu:[[azonban]] t+hu:[[mindazonáltal]] t+hu:[[mégis]] t+hu:[[mindamellett]] t-balance ([[WT:EDIT|Assisted]]) <though#51332564>

--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -37,6 +37,7 @@ From {{etyl|enm|en}} {{m|enm|thaugh}}, {{m|enm|thagh|}}, from {{etyl|ang|en}} {{
 * Georgian: {{t|ka|მაინც}}
 * German: {{t+|de|trotzdem}}, {{t+|de|doch}}, {{t+|de|allerdings}}
 * Greek: {{t+|el|εν τούτοις}}, {{t|el|παρά ταύτα}}, {{t+|el|ωστόσο}}
+* Hungarian: {{t+|hu|azért}}, {{t+|hu|azonban}}, {{t+|hu|mindazonáltal}}, {{t+|hu|mégis}}, {{t+|hu|mindamellett}}
 * Indonesian: {{t|id|bagaimanapun juga}}
 * Interlingua: {{t|ia|benque}}, {{t+|ia|malgrado}}, {{t|ia|non obstante}}
 * Italian: {{t+|it|comunque}}, {{t+|it|nonostante}}, {{t|it|in ogni caso}}, {{t|it|ad ogni modo}}
@@ -45,10 +46,10 @@ From {{etyl|enm|en}} {{m|enm|thaugh}}, {{m|enm|thagh|}}, from {{etyl|ang|en}} {{
 * Luo: {{t|luo|kata kamano}}
 * Malay: {{t|ms|walau bagaimana}}
 * Navajo: {{t|nv|ndi}}
+{{trans-mid}}
 * Norwegian:
 *: Bokmål: {{t+|nb|dog}}
 *: Nynorsk: {{t|nn|do}}
-{{trans-mid}}
 * Occitan: {{t+|oc|pasmens}}, {{t|oc|ni per tot}}, {{t|oc|ça que la}}, {{t+|oc|pr'aquò}}, {{t+|oc|pr'aquò}}
 * Persian: {{t+|fa|گرچه|tr=garče|sc=fa-Arab}}
 * Polish: {{t+|pl|jednak}}, {{t+|pl|mimo to}}, {{t|pl|bez względu na to}}
@@ -95,6 +96,7 @@ From {{etyl|enm|en}} {{m|enm|thaugh}}, {{m|enm|thagh|}}, from {{etyl|ang|en}} {{
 * Georgian: {{t|ka|მიუხედავად იმისა, რომ}}
 * German: {{t+|de|obwohl}}
 * Greek: {{t|el|έστω και αν}}, {{t+|el|αν και}}, {{t+|el|μολονότι}}, {{t+|el|καίτοι}}
+* Hungarian: {{t+|hu|bár}}, {{t+|hu|noha}}, {{t+|hu|habár}}, {{t+|hu|jóllehet}}, {{t+|hu|ámbár}}
 * Icelandic: {{t+|is|þó}}, {{t+|is|þótt}}
 * Indonesian: {{t+|id|walau}}, {{t+|id|meski}}
 * Irish: {{t|ga|cé go}}
