--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -37,7 +37,7 @@ From {{etyl|enm|en}} {{m|enm|thaugh}}, {{m|enm|thagh|}}, from {{etyl|ang|en}} {{
 * Georgian: {{t|ka|მაინც}}
 * German: {{t+|de|trotzdem}}, {{t+|de|doch}}, {{t+|de|allerdings}}
 * Greek: {{t+|el|εν τούτοις}}, {{t|el|παρά ταύτα}}, {{t+|el|ωστόσο}}
-* Hungarian: {{t+|hu|azért}}, {{t+|hu|azonban}}, {{t+|hu|mindazonáltal}}, {{t+|hu|mégis}}, {{t+|hu|mindamellett}}
+* Hungarian: {{t+|hu|azért}}, {{t+|hu|mindazonáltal}}, {{t+|hu|mindamellett}}, {{t+|hu|mégis}}
 * Indonesian: {{t|id|bagaimanapun juga}}
 * Interlingua: {{t|ia|benque}}, {{t+|ia|malgrado}}, {{t|ia|non obstante}}
 * Italian: {{t+|it|comunque}}, {{t+|it|nonostante}}, {{t|it|in ogni caso}}, {{t|it|ad ogni modo}}
