--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -194,6 +194,9 @@ From {{inh|fr|fro|dame}}, from {{inh|fr|LL.|domna}}, shortened variant of {{inh|
 # {{lb|fr|chess}} {{l|en|queen}}
 # {{lb|fr|card games}} {{l|en|queen}}
 
+====Synonyms====
+* {{l|fr|de|d<sup>e</sup>}}
+
 ====Derived terms====
 * {{l|fr|dame d'attendre}}
 * {{l|fr|dame d'honneur}}
