--- a/en/h/hold with the hare and run with the hounds.746718.wikitext
+++ b/en/h/hold with the hare and run with the hounds.746718.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+===Pronunciation===
+* {{audio|en-au-hold with the hare and run with the hounds.ogg|Audio (AU)|lang=en}}
+
 ===Verb===
 {{head|en|verb|head=[[hold]] [[with]] [[the]] [[hare]] [[and]] [[run]] with the [[hound]]s}}
 
