Adding EN-AU audio file: in one's right mind <in one's right mind#51353603>

--- a/en/i/in one's right mind.775705.wikitext
+++ b/en/i/in one's right mind.775705.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+===Pronunciation===
+* {{audio|en-au-in one's right mind.ogg|Audio (AU)|lang=en}}
+
 ===Adjective===
 {{head|en|adjective}}
 
