--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -16,18 +16,18 @@ From {{der|en|enm|bidden}}, from the {{der|en|ang|-}} verb {{m|ang|biddan||ask, 
 
 # {{lb|en|transitive}} To issue a [[command]]; to [[tell]].
 #: ''He '''bade''' me come in.''
-#* '''1596-99?''', {{w|William Shakespeare}}, ''The Merchant of Venice'', Act II, scene v:
+#* '''1596-97''', {{w|William Shakespeare}}, ''The Merchant of Venice'', Act II, Scene V:
 #*: ''Shylock'': [...] Why Jessica, I say!
 #*: ''Launcelot'': Why, Jessica!
 #*: ''Shylock'': Who '''bids''' thee call? I do not '''bid''' thee call.
 #*: ''Launcelot'': Your worship was [[wont]] to tell me that I could do nothing without '''bidding'''.
 # {{lb|en|transitive}} To [[invite]]; to [[summon]].
 #: ''She was '''bidden''' to the wedding.''
-#* '''1596-99?''', {{w|William Shakespeare}}, ''The Merchant of Venice'', Act II, scene v:
+#* '''1596-97''', {{w|William Shakespeare}}, ''The Merchant of Venice'', Act II, Scene V:
 #*: ''Jessica'': Call you? What is your will?
 #*: ''Shylock'': I am '''bid''' forth to supper, Jessica: / [...] But [[wherefore]] should I go? / I am not '''bid''' for love; they flatter me;
 # {{lb|en|transitive}} To [[utter]] a [[greeting]] or [[salutation]].
-#* '''1596-99?''', {{w|William Shakespeare}}, ''The Merchant of Venice'', Act I, scene iii:
+#* '''1596-97''', {{w|William Shakespeare}}, ''The Merchant of Venice'', Act I, Scene III:
 #*: ''Portia'': If I could '''bid''' the fifth welcome with so good heart as I / can '''bid''' the other four farewell, I should be glad of his / approach; [...]
 
 =====Usage notes=====
