--- a/en/h/helping hand.803463.wikitext
+++ b/en/h/helping hand.803463.wikitext
@@ -14,6 +14,7 @@
 * Catalan: {{t|ca|cop de mà|m}}
 * Finnish: {{t|fi|auttava käsi}}, {{t|fi|kolmas käsi}} {{qualifier|tool}}
 * French: {{t+|fr|coup de pouce|m}}, {{t+|fr|coup de main|m}}
+* Hungarian: {{t|hu|segítő kéz}}
 {{trans-mid}}
 * Icelandic: {{t+|is|hjálparhönd|f}}, {{qualifier|lend a helping hand}} {{t|is|rétta hjálparhönd}}, {{qualifier|give a helping hand}} {{t|is|leggja hönd á plóg}}, {{t|is|leggja hönd á plóg}}
 * Irish: {{t|ga|lámh chuidithe|f}}, {{t|ga|lámh chúnta|f}}
