--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -102,6 +102,8 @@ There are two main theories for the origin of {{etyl|fro|en}} {{m|fro|ermine}}. 
 {{trans-bottom}}
 
 {{trans-top|the white fur of this animal}}
+* Armenian:
+*: Old Armenian: {{t|xcl|կնգմենի}}
 * Bulgarian: {{t|bg|хермелин|m}}
 * Czech: {{t|cs|hranostaj|m}}
 * Finnish: {{t|fi|kärpännahka}}, {{t|fi|hermeliini}}
