--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -58,6 +58,8 @@ There are two main theories for the origin of {{etyl|fro|en}} {{m|fro|ermine}}. 
 * Irish: {{t|ga|easóg|f}}, {{t|ga|cailín bán|m}}, {{t|ga|bláthnaid|f}} {{qualifier|female}}
 * Italian: {{t+|it|ermellino|m}}
 * Japanese: {{t+|ja|おこじょ|tr=okojo}}
+* Kurdish:
+*: Northern Kurdish: {{t|kmr|fisos}}
 * Ladin: {{t|lld|armelin}}
 * Latin: {{t|la|Mustela erminea|f}}
 * Latvian: {{t|lv|sermulis|m}}
