t+hu:[[csőharang]] ([[WT:EDIT|Assisted]]) <tubular bells#51363268>

--- a/en/t/tubular bells.855148.wikitext
+++ b/en/t/tubular bells.855148.wikitext
@@ -12,6 +12,7 @@
 *: Mandarin: {{t|cmn|管鐘|sc=Hani}}, {{t|cmn|管钟|tr=guǎnzhōng|sc=Hani}}
 {{trans-mid}}
 * Finnish: {{t+|fi|putkikellot|p}}
+* Hungarian: {{t|hu|csőharang}}
 * Russian: {{t-needed|ru}}
 {{trans-bottom}}
 
