--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -30,6 +30,7 @@ There are two main theories for the origin of {{etyl|fro|en}} {{m|fro|ermine}}. 
 * Albanian: {{t|sq|ermelina}}
 * Arabic: {{t|ar|قَاقِم|m}}
 * Armenian: {{t+|hy|կնգում}}, {{t|hy|սպիտակ աքիս}}
+*: Middle Armenian: {{t|axm|ախազ}}
 * Basque: {{t|eu|erbinude zuri}}
 * Belarusian: {{t|be|гарнаста́й|m}}
 * Breton: {{t|br|erminig}}
@@ -107,6 +108,7 @@ There are two main theories for the origin of {{etyl|fro|en}} {{m|fro|ermine}}. 
 {{trans-top|the white fur of this animal}}
 * Armenian:
 *: Old Armenian: {{t|xcl|կնգմենի}}
+*: Middle Armenian: {{t|axm|ախազ}}
 * Bulgarian: {{t|bg|хермелин|m}}
 * Czech: {{t|cs|hranostaj|m}}
 * Finnish: {{t|fi|kärpännahka}}, {{t|fi|hermeliini}}
