--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -60,7 +60,7 @@ There are two main theories for the origin of {{etyl|fro|en}} {{m|fro|ermine}}. 
 * Italian: {{t+|it|ermellino|m}}
 * Japanese: {{t+|ja|おこじょ|tr=okojo}}
 * Kurdish:
-*: Central Kurdish: {{t|ckb|قاقوم}}
+*: Central Kurdish: {{t|ckb|قاقِم}}, {{t|ckb|قاقوم}}
 *: Northern Kurdish: {{t|kmr|fisos}}, {{t|kmr|ququme}}
 * Ladin: {{t|lld|armelin}}
 * Latin: {{t|la|Mustela erminea|f}}
