--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -245,11 +245,14 @@ From {{der|en|enm|beden}}, from the {{der|en|ang|-}} verb {{m|ang|bēodan||offer
 
 ==Afrikaans==
 
+===Etymology===
+From {{inh|af|nl|bidden}}, from {{inh|af|dum|bidden}}, from {{inh|af|odt|bidden}}, from {{inh|af|gem-pro|*bidjaną||to ask}}, from {{inh|af|ine-pro|*gʷʰédʰyeti}}.
+
 ===Pronunciation===
-* {{IPA|[bət]|lang=af}}
+* {{IPA|/bət/|[bət]|lang=af}}
 
 ===Verb===
-{{af-verb}}
+{{af-verb|biddende}}
 
 # to [[pray]]
 
