--- a/en/n/Num Lock.746598.wikitext
+++ b/en/n/Num Lock.746598.wikitext
@@ -11,6 +11,7 @@
 
 ====Translations====
 {{trans-top|a key that toggles the function of the numeric keypad}}
+* Finnish: {{t|fi|num lock}}, {{t|fi|numerolukitusnäppäin}}
 * Russian: {{t|ru|намло́к|m}}
 {{trans-mid}}
 {{trans-bottom}}
