--- a/en/v/vortical.855979.wikitext
+++ b/en/v/vortical.855979.wikitext
@@ -32,7 +32,7 @@ From (the stem of) {{etyl|la|en}} {{m|la|vortex}} {{suffix||al|lang=en}}.
 * Czech: {{t-needed|cs}}
 * Dutch: {{t+|nl|wervelend}}, {{t|nl|dwarrelend als een draaikolk}}
 * Finnish: {{t|fi|pyörremäinen}}, {{t|fi|pyörteinen}}, {{t|fi|pyörteikäs}}
-* French: {{t-needed|fr}}
+* French: {{t+|fr|tourbillonnant}}
 * German: {{t+|de|kreisend}}, {{t|de|wirbelartig}}, {{t+|de|wirbelnd}}
 {{trans-mid}}
 * Hindi: {{t-needed|hi}}
