/* Related terms */ + [[archipelago]] <island#51378091>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -50,6 +50,7 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 * {{l|en|insular}}
 * {{l|en|isle}}
 * {{l|en|islet}}
+* {{l|en|archipelago}}
 
 ====Translations====
 {{trans-top|area of land completely surrounded by water}}
