t+nii:[[kung]] ([[WT:EDIT|Assisted]]) <pig#51383713>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -236,6 +236,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Navajo: {{t|nv|bisóodi|sc=Latn}}
 * Nepali: {{t+|ne|सुँगुर|tr=sũgur}}
 * Ngazidja Comorian: {{t|zdj|purunku}}
+* Nii: {{t|nii|kung}}
 * Nivkh: {{t|niv|овӻоӈ}}
 * Norman: {{t|nrf|couochon|m}} {{qualifier|Jersey}}, {{t|nrf|bête à saie|f}} {{qualifier|Jersey}}, {{t|nrf|por|m}} {{qualifier|Jersey}}, {{t|nrf|gronneux|m}} {{qualifier|Jersey}}, {{t|nrf|moussieu|m}} {{qualifier|Jersey}}, {{t|nrf|quétot|m}} {{qualifier|Jersey}}
 * Norwegian: {{t+|no|svin|n}}, {{t+|no|gris|m}}
