--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -90,6 +90,11 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 ====Related terms====
 * {{l|en|weigh}}
 
+====Coordinate terms====
+* {{l|en|mass}}
+* {{l|en|inertial mass}}
+* {{l|en|gravitational mass}}
+
 ====Translations====
 {{trans-top|force due to gravity}}
 * Afrikaans: {{t|af|gewig}}
