--- a/en/a/at the end of one's tether.776810.wikitext
+++ b/en/a/at the end of one's tether.776810.wikitext
@@ -15,7 +15,7 @@
 {{trans-top|At the limit of one’s patience}}
 * Chinese:
 *: Mandarin: {{t|cmn|在耐心的极限|tr=zài nàixīn de jíxiàn}}
-* French: {{t+|fr|au bout du rouleau}}
+* French: {{t+|fr|au bout du rouleau}}, {{t+|fr|exaspéré}}
 {{trans-mid}}
 * Korean: {{t|ko|진퇴양난에 빠진}}
 * Scottish Gaelic: {{t|gd|aig an dùbhlan le}}
