t+kpx:[[ovo]] ([[WT:EDIT|Assisted]]) <pig#51388873>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -234,6 +234,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Mongolian: {{t+|mn|гахай}}
 * Montagnais: {{t|moe|kukush}}
 * Motu: {{t|meu|boroma}}
+* Mountain Koiari: {{t|kpx|ovo}}
 * Nahuatl: {{t+|nah|pitzotl}}
 * Navajo: {{t|nv|bisóodi|sc=Latn}}
 * Nepali: {{t+|ne|सुँगुर|tr=sũgur}}
