--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -324,6 +324,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Voro: {{t|vor|tsiga}}
 * Votic: {{t|vot|sika}}
 * Walloon: {{t+|wa|pourcea}}, {{t+|wa|coshet|m}}
+* Warembori: {{t|wsa|pue}}
 * Welsh: {{t+|cy|mochyn|m}}
 * West Coast Bajau: {{t|bdr|menungal}}, {{t|bdr|ogok}}, {{t|bdr|bakas}}
 * West Frisian: {{t|fy|baarch|c}}
