--- a/en/m/millpond.720302.wikitext
+++ b/en/m/millpond.720302.wikitext
@@ -14,6 +14,7 @@
 *: Mandarin: {{t-needed|cmn}}
 {{trans-mid}}
 * Finnish: {{t|fi|myllylampi}}
+* Galician: {{t|gl|banzado|m}}, {{t+|gl|cubo|m}}, {{t|gl|presa|f}}
 * Portuguese: {{t-needed|pt}}
 {{trans-bottom}}
 
