t+gl:[[banzado]] t+ast:[[banzáu]] ([[WT:EDIT|Assisted]]) <mill dam#51392596>

--- a/en/m/mill dam.720303.wikitext
+++ b/en/m/mill dam.720303.wikitext
@@ -22,7 +22,9 @@
 
 ====Translations====
 {{trans-top|dam constructed in order to create a millpond}}
+* Asturian: {{t|ast|banzáu|m}}
 * Finnish: {{t|fi|myllypato}}
+* Galician: {{t|gl|banzado|m}}
 * German: {{t|de|Mühldamm|m}}
 {{trans-mid}}
 * Irish: {{t|ga|damba muilinn|m}}
