--- a/en/w/wah lau.720445.wikitext
+++ b/en/w/wah lau.720445.wikitext
@@ -12,7 +12,7 @@ From {{etyl|zhx-teo|en}} and {{etyl|nan-hok|en}}. Ultimate origin uncertain: fir
 ===Interjection===
 {{en-interj|head=wah lau}}
 
-# {{lb|en|Singapore|informal}} [[oh no|Oh no]]!
+# {{lb|en|Singapore|Malaysia|informal}} [[oh no|Oh no]]!
 #* {{quote-newsgroup |newsgroup=soc.culture.asean|url=https://groups.google.com/forum/#!search/%22tekan%22$20before$3A1994-12-31/soc.culture.asean/QTnYnlHJ9ow/wXTWwQ5Kw_sJ|date=22 Feb 1992|passage= "'''Wah lau'''! You tekan him, ah?  But he bigger than you, man!"}}
 
 ===Derived terms===
