--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -203,9 +203,10 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * French: {{t+|fr|poids}}, {{t+|fr|lest|m}}
 * German: {{t+|de|Gewicht|n}}
 * Greek: {{t+|el|βάρος|n}}
+* Hebrew: {{t+|he|מִשְׁקֹלֶת|f|tr=mishqólet}}
 * Hungarian: {{t+|hu|súly}}
-* Italian: {{t+|it|peso|m}}
 {{trans-mid}}
+* Italian: {{t+|it|peso|m}}
 * Japanese: {{t|ja|重り|tr=omori}}
 * Latvian: {{t|lv|svars|m}}, {{t|lv|atsvars|m}}
 * Luxembourgish: {{t|lb|Gewiicht|n}}
@@ -229,9 +230,10 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Finnish: {{t+|fi|punnus}}
 * French: {{t+|fr|poids|m}}
 * Greek: {{t+|el|ζύγι|n}}, {{t+|el|σταθμά|n-p}}, {{t|el|σταθμίον|n}}
+* Hebrew: {{t+|he|מִשְׁקֹלֶת|f|tr=mishqólet}}
 * Hungarian: {{t+|hu|súly}}
-* Japanese: {{t|ja|分銅|tr=fundō}}
 {{trans-mid}}
+* Japanese: {{t|ja|分銅|tr=fundō}}
 * Korean: {{t+|ko|체중}}
 * Maori: {{t|mi|maihea}}
 * Old English: {{t|ang|ġewiht|n}}
@@ -259,10 +261,11 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * French: {{t+|fr|poids|m}}
 * German: {{t+|de|Gewicht|n}}
 * Greek: {{t+|el|βάρη|n-p}}
+* Hebrew: {{t+|he|מִשְׁקֹלֶת|f|tr=mishqólet}}
 * Hungarian: {{t+|hu|súly}}
 * Italian: {{t+|it|peso|m}}
-* Japanese: {{t|ja|重り|tr=omori}}
 {{trans-mid}}
+* Japanese: {{t|ja|重り|tr=omori}}
 * Persian: {{t+|fa|وزنه|tr=vazne|sc=fa-Arab}}
 * Portuguese: {{t+|pt|peso|m}}, {{t+|pt|haltere|m}}
 * Romanian: {{t+|ro|halteră}}, {{t|ro|haltere|f-p}}, {{t+|ro|greutate|f}}
