--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -129,7 +129,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Greek: {{t+|el|βάρος|n}}
 *: Ancient: {{t|grc|βάρος|n}}
 * Hawaiian: {{t|haw|kaumaha}}
-* Hebrew: {{t+|he|מִשְׁקָל|m|tr=mishkál|sc=Hebr}}
+* Hebrew: {{t+|he|מִשְׁקָל|m|tr=mishqál|sc=Hebr}}
 * Hindi: {{t+|hi|भार|m|sc=Deva}}
 * Hungarian: {{t+|hu|súly}}
 * Icelandic: {{t+|is|þyngd}}
