/* Translations */ Added Ancient Greek translation of this word. <bent#51403676>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -59,6 +59,8 @@ From {{m|en|bend}}.
 * French: {{t+|fr|courbé}}
 * Georgian: {{t|ka|გაღუნული|sc=Geor}}
 * German: {{t+|de|gebeugt}}
+* Greek:
+*: Ancient: {{t|grc|σκολιός}}
 * Hungarian: {{t+|hu|hajlott}}, {{t+|hu|görbe}}
 * Indonesian: {{t+|id|bengkok}}
 * Italian: {{t+|it|piegato|m}}, {{t+|it|ripiegato|m}}
