--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -182,6 +182,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Icelandic: {{t+|is|svín|n}}
 * Ido: {{qualifier|♂♀}} {{t+|io|porko}}, {{qualifier|♂}} {{t+|io|porkulo}}, {{qualifier|♂♀}} {{t+|io|porkino}}
 * Ilocano: {{t|ilo|baboy}}
+* Imonda: {{t|imn|malhu}}
 * Inabaknon: {{t|abx|baktin}}
 * Indonesian: {{t+|id|babi}}
 * Interlingua: {{t|ia|porco}}
