/* Translations */ Added Ancient Greek translation of this word. <bound#51408466>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -226,6 +226,7 @@ From {{etyl|fr|en}} {{m|fr|bondir||to leap, bound, originally make a loud resoun
 * French: {{t+|fr|bond|f}}, {{t+|fr|saut|m}}
 * German: {{t+|de|Sprung|m}}
 * Greek: {{t+|el|άλμα|n}}
+*: Ancient: {{t|grc|πήδημα|n}}
 {{trans-mid}}
 * Irish: {{t|ga|preab|f}}, {{t|ga|airleog|f}}
 * Italian: {{t+|it|salto|m}}, {{t+|it|balzo|m}}
