--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -134,7 +134,7 @@ From {{inh|en|enm|binden}}, from {{inh|en|ang|bindan}}, from {{inh|en|gem-pro|*b
 * Swahili: {{t+|sw|funga|alt=kufunga}}
 * Swedish: {{t+|sv|binda}}
 * Thai: {{t-needed|th}}
-* Vietnamese: {{t+|vi|trói}}, {{t+|vi|buộc}}
+* Vietnamese: {{t+|vi|trói}}, {{t+|vi|buộc}}, {{t+|vi|cột}}
 * West Frisian: {{t|fy|bine}}
 {{trans-bottom}}
 
