t+it:[[anatrare]] ([[WT:EDIT|Assisted]]) <quack#51417285>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -80,7 +80,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * Indonesian: {{t|id|kwek kwek}}
 {{trans-mid}}
 * Interlingua: {{t|ia|quaccar}}
-* Italian: {{t-check|it|[[fare]] [[qua qua]]}} <!-- was "[[fare]] [[qua qua]]" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
+* Italian: {{t-check|it|[[fare]] [[qua qua]]}} <!-- was "[[fare]] [[qua qua]]" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->, {{t|it|anatrare}}
 * Japanese: {{qualifier|duck}} {{t|ja|ガーガーと鳴く|tr=gā-gā to naku}}, {{qualifier|colloquial|human}} {{t|ja|ガヤガヤしゃべる|tr=gayagaya shaberu}}
 * Maori: {{t|mi|keakea}}, {{t|mi|kēkē}}
 * Norwegian: {{t|no|kvekke}}
