--- a/en/b/biatches.773765.wikitext
+++ b/en/b/biatches.773765.wikitext
@@ -4,6 +4,7 @@
 {{head|en|noun plural form}}
 
 # {{plural of|biatch|lang=en}}
+# {{used as an affectionate or disparaging form of address.lang=en}}
 
 ===Anagrams===
 * {{anagrams|en|a=abcehist|Thebaics|ice baths|icebaths}}
