--- a/en/m/merchant navy.776864.wikitext
+++ b/en/m/merchant navy.776864.wikitext
@@ -14,6 +14,7 @@
 * French: {{t+|fr|marine marchande|f}}
 * German: {{t+|de|Handelsmarine|f}}, {{t+|de|Handelsflotte|f}}
 {{trans-mid}}
+* Italian: {{t|it|marina mercantile|f}}
 * Portuguese: {{t|pt|marinha mercante|f}}
 * Spanish: {{t|es|marina mercante|f}}
 {{trans-bottom}}
