--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -31,7 +31,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 #*: "Miss Chastene, could you fetch me out an extra plate of '''pig''' and biscuit. My partner can't do without your marvelous cooking."
 # Someone who overeats or eats rapidly and noisily.
 #: {{ux|en|You gluttonous '''pig'''! Now that you've eaten all the cupcakes, there will be none for the party!}}
-# A [[nasty]] or [[disgusting]] person, usually male.
+# A [[lecherous]] or [[sexist]] man.
 #: {{ux|en|She considered him a '''pig''' as he invariably stared at her bosom when they talked.}}
 # A [[dirty]] or [[slovenly]] person.
 #: {{ux|en|He was a '''pig''' and his apartment a pigpen; take-away containers and pizza boxes in a long, moldy stream lined his counter tops.}}
