t+hu:[[képben van]] t+de:[[im Bilde über etwas sein]] ([[WT:EDIT|Assisted]]) <in the know#51420044>

--- a/en/i/in the know.742284.wikitext
+++ b/en/i/in the know.742284.wikitext
@@ -28,10 +28,10 @@
 * Estonian: {{t|et|teadlik}}
 * Finnish: {{t+|fi|tietävä}}
 * French: {{t+|fr|au courant}}, {{t|fr|au parfum}} {{qualifier|colloquial}}
-* German: {{t+|de|eingeweiht}}
+* German: {{t+|de|eingeweiht}}, {{t|de|im Bilde über etwas sein}}
 * Hindi: {{t-needed|hi}}
 {{trans-mid}}
-* Hungarian: {{t+|hu|tájékozott}}, {{t+|hu|beavatott}}, {{t|hu|jól értesült}}
+* Hungarian: {{t+|hu|tájékozott}}, {{t+|hu|beavatott}}, {{t|hu|jól értesült}}, {{t|hu|képben van}}
 * Italian: {{t|it|al corrente}}
 * Japanese: {{t-needed|ja}}
 * Korean: {{t-needed|ko}}
