--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -67,6 +67,7 @@ From {{inh|en|enm|sir}}, borrowed from {{bor|en|fro|sire||master, sir, lord}}, f
 {{trans-mid}}
 * Latvian: {{t|lv|sers|m}}
 * Lithuanian: {{t|lt|ponas|m}}
+* Polish: {{t+|pl|pan|m}}
 * Portuguese: {{t+|pt|senhor|m}}
 * Russian: {{t+|ru|господи́н|m|sc=Cyrl}}
 * Turkish: {{t+|tr|efendim}}
