--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -15,6 +15,8 @@ From {{inh|en|enm|beholden}}, from {{inh|en|ang|behealdan||to hold, have, occupy
 #* {{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
 |title={{w|The Celebrity}}|chapter=8
 |passage=The humor of my proposition appealed more strongly to Miss Trevor than I had looked for, and from that time forward she became her old self again;{{...}}. Now she had come to look upon the matter in its true proportions, and her anticipation of a possible chance of teaching him a lesson was a pleasure to '''behold'''.}}
+# {{lb|en|intransitive}} To look.
+# {{lb|en|transitive}} To [[contemplate]].
 
 ====Usage notes====
 Rarely used in informal speech. The past participle [[beholden]] now has a meaning detached from the other forms of the word.
