--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -11,7 +11,9 @@ From {{inh|en|enm|beholden}}, from {{inh|en|ang|behealdan||to hold, have, occupy
 ===Verb===
 {{en-verb|beholds|beholding|beheld|beheld|past_ptc2=beholden|past_ptc2_qual=rare}}
 
-# {{lb|en|transitive}} To [[see]] or [[look at]], esp. [[appreciative]]ly.
+# {{lb|en|transitive}} To [[see]] or [[look at]], esp. [[appreciative]]ly; to [[descry]], look upon.
+#* '''1885''', {{w|Richard F. Burton}}, ''The Supplemental Nights to the Thousand Nights and a Night'', Night 532:
+#*: {{...}}Alaeddin ate and drank and was cheered and after he had rested and had recovered spirits he cried, "Ah, O my mother, I have a sore grievance against thee for leaving me to that accursed wight who strave to compass my destruction and designed to take my life. Know that I '''beheld''' Death with mine own eyes at the hand of this damned wretch, whom thou didst certify to be my uncle;{{...}}
 #* {{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
 |title={{w|The Celebrity}}|chapter=8
 |passage=The humor of my proposition appealed more strongly to Miss Trevor than I had looked for, and from that time forward she became her old self again;{{...}}. Now she had come to look upon the matter in its true proportions, and her anticipation of a possible chance of teaching him a lesson was a pleasure to '''behold'''.}}
