--- a/en/c/catch hell.802514.wikitext
+++ b/en/c/catch hell.802514.wikitext
@@ -20,3 +20,9 @@
 * {{l|en|catch it}}
 * {{l|en|cop it}}
 * {{l|en|get it}}
+
+====Translations====
+{{trans-top|to be scolded or chastised}}
+* French: {{qualifier|colloquial|France}} {{t+|fr|se faire appeler Arthur}}, {{qualifier|colloquial}} {{t+|fr|se faire sonner les cloches}}, {{qualifier|informal}} {{t+|fr|se faire tirer les oreilles}}, {{qualifier|France|informal}} {{t+|fr|se faire remonter les bretelles}}, {{qualifier|colloquial}} {{t|fr|[[se faire]] [[enguirlander]]}}
+{{trans-mid}}
+{{trans-bottom}}
