--- a/en/c/catch it.802385.wikitext
+++ b/en/c/catch it.802385.wikitext
@@ -19,5 +19,11 @@
 * {{l|en|catch hell}}
 * {{l|en|get it}}
 
+====Translations====
+{{trans-top|to be scolded or chastised}}
+* French: {{qualifier|colloquial|France}} {{t+|fr|se faire appeler Arthur}}, {{qualifier|colloquial}} {{t+|fr|se faire sonner les cloches}}, {{qualifier|informal}} {{t+|fr|se faire tirer les oreilles}}, {{qualifier|France|informal}} {{t+|fr|se faire remonter les bretelles}}, {{qualifier|colloquial}} {{t|fr|[[se faire]] [[enguirlander]]}}
+{{trans-mid}}
+{{trans-bottom}}
+
 [[Category:English predicates]]
 [[Category:English terms with placeholder "it"]]
