--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -12,33 +12,37 @@ Earlier {{m|en|seise}}, from {{etyl|enm|en}} {{m|enm|seisen}}, {{m|enm|sesen}}, 
 {{en-verb|seiz}}
 
 # {{lb|en|transitive}} To deliberately take hold of; to [[grab]] or [[capture]].
+#: {{syn|en|clasp|grasp|grip|Thesaurus:grasp}}
 # {{lb|en|transitive}} To take advantage of (an [[opportunity]] or [[circumstance]]).
+#: {{syn|en|jump on}}
 # {{lb|en|transitive}} To take possession of (by force, law etc.).
-#: ''to '''seize''' smuggled goods''
-#: ''to '''seize''' a ship after libeling''
+#: {{syn|en|arrogate|commandeer|confiscate}}
+#: {{ux|en|to '''seize''' smuggled goods}}
+#: {{ux|en|to '''seize''' a ship after libeling}}
 # {{lb|en|transitive}} To have a sudden and powerful effect upon.
 #* '''2010''', Antonio Saggio, ''A Secret van Gogh: His Motif and Motives'', {{ISBN|9781447507932}}, {{gbooks|Ts1vAgAAQBAJ|11|seizes}}:
 #*: This sensation of an object becoming alive is a characteristic that, I believe, '''seizes''' all viewers of a van Gogh. The Bible goes beyond being a simple still-life object to become a living thing, an expression of strength, an existence that emanates from itself, beyond the painting surface to participate in our very lives.
-#: ''a panic '''seized''' the crowd''
-#: ''a fever '''seized''' him''
+#: {{ux|en|a panic '''seized''' the crowd}}
+#: {{ux|en|a fever '''seized''' him}}
 # {{lb|en|transitive|nautical}} To [[bind]], [[lash]] or make [[fast]], with several turns of small rope, cord, or small line.
-#: ''to '''seize''' two fish-hooks back to back''
-#: ''to '''seize''' or stop one rope on to another''
+#: {{ux|en|to '''seize''' two fish-hooks back to back}}
+#: {{ux|en|to '''seize''' or stop one rope on to another}}
 # {{lb|en|transitive|obsolete}} To [[fasten]], [[fix]].
 # {{lb|en|intransitive}} To lay hold in [[seizure]], by hands or claws (+ {{m|en|on}} or {{m|en|upon}}).
-#: ''to '''seize''' on the neck of a horse''
-#: ''The text which had '''seized''' upon his heart with such comfort and strength abode upon him for more than a year.'' (''Southey'', Bunyan, p. 21)
+#* {{cite-book
+|year=1830
+|title=Bunyan
+|author=Robert Southey
+|authorlink=Robert Southey
+|page=21
+|passage=The text which had '''seized''' upon his heart with such comfort and strength abode upon him for more than a year.}}
+#: {{ux|en|to '''seize''' on the neck of a horse}}
 # {{lb|en|intransitive}} To have a [[seizure]].
 #* '''2012''', Daniel M. Avery, ''Tales of a Country Obstetrician''
 #*: Nearing what she thought was a climax, he started '''seizing''' and fell off her. Later, realizing he was dead, she became alarmed and dragged the body to his vehicle to make it look like he had died in his truck.
 # {{lb|en|intransitive}} To [[bind]] or [[lock]] in position [[immovably]]; see also '''[[seize up]]'''.
-#: ''Rust caused the engine to '''seize''', never to run again.''
+#: {{ux|en|Rust caused the engine to '''seize''', never to run again.}}
 # {{lb|en|UK|intransitive}} To submit for consideration to a deliberative body.
-
-====Synonyms====
-* {{sense|deliberately take hold of}} {{l|en|clasp}}, {{l|en|grasp}}, {{l|en|grip}}; See also [[Thesaurus:grasp]]
-* {{sense|take advantage of}} {{l|en|jump on}}
-* {{sense|take possession of}} {{l|en|arrogate}}, {{l|en|commandeer}}, {{l|en|confiscate}}
 
 ====Derived terms====
 {{der3
