--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -12,7 +12,7 @@ Of {{etyl|trk|en}} origin. Compare Turkish {{m|tr|balkan||wooded mountain range}
 ===Proper noun===
 {{en-proper noun}}
 
-# A [[geographical]] region in the southeast of Europe, roughly equivalent to the area covered by [[Albania]], [[Bosnia and Herzegovina]], [[Bulgaria]], [[Croatia]], [[Greece]], [[Macedonia]], [[Montenegro]], [[Serbia]] (and [[Kosovo]]), sometimes  including [[Romania]] and [[Slovenia]].
+# A [[geographical]] region in the southeast of Europe, roughly equivalent to the area covered by [[Albania]], [[Bosnia and Herzegovina]], [[Bulgaria]], [[Croatia]], [[Greece]], [[North Macedonia]], [[Montenegro]], [[Serbia]] (and [[Kosovo]]), sometimes  including [[Romania]] and [[Slovenia]].
 #* '''2002''' — Dennis P. Hupchick, ''The Balkans: From Constantinople to Communism'', p.104:
 #*: As the Ottomans' victories in the '''Balkans''' multiplied, increasing numbers of Anatolian warriors flocked to their ranks, and their territorial conquests grew.
 #* '''2015''' — Anastas Vangeli, ''On the Growing Cooperation Between China and the Western Balkans'', in: Nikolaos Papakostas and Nikolaos Pasamitros (editors), ''An Agenda for the Western Balkans: From Elite Politics to Social Sustainability'', Stuttgart, p.182:
