/* Translations */ sv for checking: [[förtäring]] <consumption#51449987>

--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -100,8 +100,9 @@ From {{etyl|fro|en}} {{m|fro|consumpcion}}, from {{etyl|la|en}} {{m|la|consumpti
 {{trans-see|pulmonary tuberculosis}}
 
 {{checktrans-top}}
-* Turkish: {{t+check|tr|yoğaltım}}
+* Swedish: {{t-check|sv|förtäring}}
 {{trans-mid}}
+* Turkish: {{t+check|tr|yoğaltım}}
 {{trans-bottom}}
 
 [[Category:en:Bacterial diseases]]
