--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -72,7 +72,7 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 * Korean: {{t+|ko|썩다}}, {{t+|ko|부패하다}}
 * Latgalian: {{t|ltg|pyut}}, {{t|ltg|trupēt}}
 {{trans-mid}}
-* Latin: {{t|la|pūtesco}}, {{t|la|tābesco}}
+* Latin: {{t|la|pūtescō}}, {{t|la|putrefaciō}}, {{t|la|tābescō}}
 * Latvian: {{t+|lv|pūt}}
 * Lithuanian: {{t|lt|pūti}}
 * Macedonian: {{t|mk|гние|impf|sc=Cyrl}}
