t+ga:[[lúbtha]] t+ga:[[cam]] ([[WT:EDIT|Assisted]]) <bent#51466820>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -89,6 +89,7 @@ From {{m|en|bend}}.
 * Chinese:
 *: Mandarin: {{t+|cmn|彎}}, {{t+|cmn|弯|tr=wān}}
 {{trans-mid}}
+* Irish: {{t|ga|lúbtha}}, {{t|ga|cam}}
 * Polish: {{t|pl|przegięty|m}}
 * Russian: {{t+|ru|пидорский}}, {{t|ru|гомосяцкий}}
 {{trans-bottom}}
