--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -55,6 +55,7 @@ Abbreviation of various terms and phrases.
 * Chinese:
 *: Cantonese: {{t|yue|CD|tr=si1 di1|sc=Hani}}
 *: Mandarin: {{t+|cmn|CD|tr=xīdì|sc=Hani}}, {{t+|cmn|光盤|sc=Hani}}, {{t+|cmn|光盘|tr=guāngpán|sc=Hani}}, {{t+|cmn|光碟|tr=guāngdié|sc=Hani}}
+* Classical Nahuatl: {{t|nci|yahualtōntli}}
 * Dutch: {{t+|nl|cd|m}} (lower case)
 * Esperanto: {{t|eo|KD}}
 * Finnish: {{t+|fi|CD}}
