--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -135,6 +135,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Haitian Creole: {{t|ht|moulen}}
 * Hebrew: {{t+|he|טַחֲנָה|f|tr=takhánah}}
 * Hindi: {{t+|hi|चक्की|f}}
+* Hungarian: {{t+|hu|daráló}}, {{t|hu|őrlő}}, {{t|hu|passzírozó}}
 * Ido: {{t+|io|muelilo}}
 * Indonesian: {{t+|id|kincir}}
 * Irish: {{t|ga|muileann|m}}
@@ -148,8 +149,8 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Kurdish:
 *: Kurmanji: {{t+|ku|aş|m}}
 *: Sorani: {{t+|ku|ئاش}}
-* Kyrgyz: {{t+|ky|тегирмен|sc=Cyrl}}
 {{trans-mid}}
+* Kyrgyz: {{t+|ky|тегирмен|sc=Cyrl}}
 * Lak: {{t|lbe|гьарахъалу}}
 * Lakota: {{t|lkt|onákpaŋ}}
 * Latin: {{t|la|mola}}, {{t|la|molendinum|n}}
@@ -283,9 +284,10 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * German: {{t+|de|Fabrik|f}} {{qualifier|general}}, {{t+|de|Werk|n}} {{qualifier|general}} {{t|de|Papiermühle|f}} {{qualifier|for paper}}
 * Greek: {{t+|el|εργοστάσιο|n}}
 * Hebrew: {{t+|he|טַחֲנָה|tr=takhánah}}
+* Hungarian: {{t+|hu|üzem}}, {{t+|hu|gyár}}, {{t+|hu|telep}}, {{t+|hu|mű}}
 * Irish: {{t|ga|muileann|m}}
-* Italian: {{t+|it|mulino|m}}, {{t+|it|macinatoio|m}}
 {{trans-mid}}
+* Italian: {{t+|it|mulino|m}}, {{t+|it|macinatoio|m}}
 * Japanese: {{t+|ja|工場|tr=こうじょう, kōjō|sc=Jpan}}
 * Korean: {{t+|ko|공장}} ({{t+|ko|工場}})
 * Macedonian: {{t|mk|фа́брика|f}}, {{t|mk|по́гон|m}}, {{t|mk|работи́лница|f}}
@@ -308,9 +310,10 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * German: {{t+|de|Fabrik|f}} {{qualifier|general}}, {{t+|de|Werk|n}} {{qualifier|general}}, [[Papiermühle]] {{g|f}} {{qualifier|for paper}}
 * Greek: {{t+|el|εργοστάσιο|n}}
 * Hebrew: {{t+|he|טחנה|tr=tachánah}}
+* Hungarian: {{t+|hu|gyár}}, {{t+|hu|üzem}}, {{t+|hu|telep}}, {{t+|hu|mű}}
+{{trans-mid}}
 * Latgalian: {{t|ltg|moltuve}}
 * Latvian: {{t|lv|maltuve}}
-{{trans-mid}}
 * Norwegian: {{t+|no|mølle|m}}, {{t+|no|fabrikk|m}} {{qualifier|general}}
 * Polish: {{t+|pl|fabryka|f}}
 * Portuguese: {{t+|pt|fábrica|f}}
@@ -325,6 +328,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Finnish: {{t+|fi|mylly}}
 * Hebrew: {{t+|he|טחנה|tr=tachánah}}
 {{trans-mid}}
+* Hungarian: {{t+|hu|gyár}}
 * Norwegian: {{t-check|no|papirmølle|m}}
 * Zazaki: {{t|zza|destari}}
 {{trans-bottom}}
