--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -242,9 +242,9 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Italian: {{t+|it|mulino|m}}
 * Japanese: {{t|ja|製粉所|tr=せいふんじょ, seifunjo}}
 * Korean: {{t+|ko|방앗간}}
+{{trans-mid}}
 * Latin: {{t|la|mola|f}}
 * Latgalian: {{t|ltg|patmalis}}, {{t|ltg|dziernovys}}
-{{trans-mid}}
 * Latvian: {{t|lv|dzirnavas|f-p}}
 * Lithuanian: {{t+|lt|malūnas|m}}
 * Macedonian: {{t|mk|млин|m}}, {{t|mk|ме́лница|f}}
@@ -284,7 +284,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * German: {{t+|de|Fabrik|f}} {{qualifier|general}}, {{t+|de|Werk|n}} {{qualifier|general}} {{t|de|Papiermühle|f}} {{qualifier|for paper}}
 * Greek: {{t+|el|εργοστάσιο|n}}
 * Hebrew: {{t+|he|טַחֲנָה|tr=takhánah}}
-* Hungarian: {{t+|hu|üzem}}, {{t+|hu|gyár}}, {{t+|hu|telep}}, {{t+|hu|mű}}
+* Hungarian: {{t+|hu|üzem}}, {{t+|hu|gyár}}, {{t+|hu|telep}}, {{t+|hu|mű|alt=-mű}}
 * Irish: {{t|ga|muileann|m}}
 {{trans-mid}}
 * Italian: {{t+|it|mulino|m}}, {{t+|it|macinatoio|m}}
@@ -310,7 +310,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * German: {{t+|de|Fabrik|f}} {{qualifier|general}}, {{t+|de|Werk|n}} {{qualifier|general}}, [[Papiermühle]] {{g|f}} {{qualifier|for paper}}
 * Greek: {{t+|el|εργοστάσιο|n}}
 * Hebrew: {{t+|he|טחנה|tr=tachánah}}
-* Hungarian: {{t+|hu|gyár}}, {{t+|hu|üzem}}, {{t+|hu|telep}}, {{t+|hu|mű}}
+* Hungarian: {{t+|hu|gyár}}, {{t+|hu|üzem}}, {{t+|hu|telep}}, {{t+|hu|mű|alt=-mű}}
 {{trans-mid}}
 * Latgalian: {{t|ltg|moltuve}}
 * Latvian: {{t|lv|maltuve}}
@@ -328,7 +328,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Finnish: {{t+|fi|mylly}}
 * Hebrew: {{t+|he|טחנה|tr=tachánah}}
 {{trans-mid}}
-* Hungarian: {{t+|hu|gyár}}
+* Hungarian: {{t+|hu|gyár|alt=-gyár}}
 * Norwegian: {{t-check|no|papirmølle|m}}
 * Zazaki: {{t|zza|destari}}
 {{trans-bottom}}
