t+hu:[[őröl]] t+hu:[[darál]] t+hu:[[passzíroz]] t-balance t+hu:[[recéz]] t+hu:[[nyüzsög]] t+hu:[[hemzseg]] t+hu:[[hengerel]] t+hu:[[nyújt]] ([[WT:EDIT|Assisted]]) <mill#51480934>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -410,12 +410,13 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Finnish: {{t+|fi|jauhaa}}, {{t|fi|jyrsiä}}
 * French: {{t+|fr|moudre}}
 * German: {{t+|de|mahlen}}
+* Hungarian: {{t+|hu|őröl}}, {{t+|hu|darál}}, {{t+|hu|passzíroz}}
 * Latvian: {{t|lv|malt}}
 * Macedonian: {{t|mk|ме́ле|impf}}, {{t|mk|соме́лува}}
 * Maori: {{t|mi|mira}}, {{t|mi|huri}}
+{{trans-mid}}
 * Old Church Slavonic:
 *: Cyrillic: {{t|cu|млѣти|impf}}
-{{trans-mid}}
 * Polish: {{t+|pl|mleć|impf}}
 * Portuguese: {{t+|pt|moer}}
 * Romanian: {{t+|ro|măcina}}
@@ -435,8 +436,9 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 {{trans-top|shape, polish, etc, using a machine}}
 * Dutch: {{t+|nl|slijpen}}
 * Finnish: {{t+|fi|työstää}}
-* Macedonian: {{t|mk|стру́га}}, {{t|mk|стру́же}}
+* Hungarian: {{t+|hu|hengerel}}, {{t+|hu|nyújt}}
 {{trans-mid}}
+* Macedonian: {{t|mk|стру́га}}, {{t|mk|стру́же}}
 * Maori: {{t|mi|mira}}
 * Spanish: {{t+|es|pulir}}, {{t+|es|fresar}}
 {{trans-bottom}}
@@ -445,13 +447,15 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Dutch: {{t+|nl|graveren}}
 * Finnish: {{t|fi|jyrsiä}}, {{t+|fi|kaivertaa}}
 {{trans-mid}}
+* Hungarian: {{t|hu|recéz}}
 * Italian: {{t+|it|orlettare}}
 {{trans-bottom}}
 
 {{trans-top|move about in an aimless fashion}}
 * Finnish: {{t+|fi|pyöriä}}
-* Maori: {{t|mi|whakatairangi}}, {{t|mi|popō}}
+* Hungarian: {{t+|hu|nyüzsög}}, {{t+|hu|hemzseg}}
 {{trans-mid}}
+* Maori: {{t|mi|whakatairangi}}, {{t|mi|popō}}
 * Spanish: {{t+|es|vagar}}
 {{trans-bottom}}
 
