--- a/en/d/DOB.26214.wikitext
+++ b/en/d/DOB.26214.wikitext
@@ -3,11 +3,14 @@
 
 ===Noun===
 {{wikipedia|dab=DOB}}
-{{wikipedia|Daughters of Bilitis}}
-{{head|en|initialism}}
+{{en-noun}}
 
-# [[date of birth]]
-# Daughters of Bilitis. {{non-gloss|The first organized and successful lesbian liberation organization in the United States.}}
+# {{initialism of|date of birth|lang=en}}
+
+===Proper noun===
+{{en-proper noun}}
+
+# {{initialism of|{{w|Daughters of Bilitis}}|lang=en}} {{non-gloss|The first organized and successful lesbian liberation organization in the United States.}}
 
 ===Anagrams===
 * {{anagrams|en|a=bdo|BOD|Bod|bod}}
