--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -442,7 +442,7 @@ From {{m|dum|bi}} + {{m|dum|te}}. Compare {{cog|gmh|biz}} ({{cog|de|bis}}).
 * {{alter|enm|bette|bett|bæt}}
 
 ===Etymology===
-From {{inh|enm|ang|bet}}, from {{inh|enm|gem-pro|*batiz}}. In adverbial senses, ousted by {{m|enm|bettre}}.
+From {{inh|enm|ang|bet}}, from {{inh|enm|gem-pro|*batiz}}. In adverbial senses, later supplemented by {{m|enm|bettre}}.
 
 ===Pronunciation===
 * {{IPA|lang=enm|/bɛt/}}
