--- a/en/a/amai.4232.wikitext
+++ b/en/a/amai.4232.wikitext
@@ -12,10 +12,10 @@ From {{der|nl|en|oh my}}.
 ===Interjection===
 {{nl-interj}}
 
-# {{lb|nl|Brabantian}} Exclamation of surprise or disappointment; [[boy]]!
+# {{lb|nl|Belgium}} Exclamation of surprise or disappointment; [[boy]]!
 #: {{ux|nl|'''Amai''', [[wat|wa']][[een|ne]] [[klap]]!|'''[[jee|Jee]]''', what a [[punch]] (or [[thunderstroke]])|inline=1}}
 #: {{ux|nl|Wa'ne [[stoot]], '''amai'''!|What a [[blunder]], '''gosh'''!|inline=1}}
-# {{lb|nl|Brabant}} [[oh my]], [[amazing]]
+# {{lb|nl|Belgium}} [[oh my]], [[amazing]]
 #: {{ux|nl|'''Amai''', da'ziet er goed uit!|'''Oh my''', that is looking good!|inline=1}}
 
 ===Anagrams===
