--- a/en/e/epiboly.775580.wikitext
+++ b/en/e/epiboly.775580.wikitext
@@ -4,7 +4,7 @@
 Borrowed from {{bor|en|grc|ἐπιβολή||addition}}
 
 ===Pronunciation===
-* {{IPA|ɛˈpɪbəli|lang=en}}
+* {{IPA|/ɪˈpɪbəli/|lang=en}}
 
 ===Noun===
 {{en-noun|-|epibolies}}
@@ -13,13 +13,12 @@ Borrowed from {{bor|en|grc|ἐπιβολή||addition}}
 # {{lb|en|embryology}} The expansion of one [[cell]] sheet over other cells, as takes place during [[gastrulation]] or [[secondary intention]] wound healing.
 
 ====Derived terms====
-{{der-top}}
-* {{l|en|epibolic}}
-* {{l|en|epibolically}}
-{{der-mid}}
-* {{l|en|epibolization}}
-* {{l|en|epibolize}}
-{{der-bottom}}
+{{der4|lang=en
+|epibolic
+|epibolically
+|epibolization
+|epibolize
+}}
 
 ====Translations====
 {{trans-top|the expansion of one cell sheet over other cells, as takes place during gastrulation or secondary intention wound healing}}
