--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -1,6 +1,7 @@
 {{also|Weight}}
 ==English==
-{{wikipedia|dab=weight (disambiguation)|weight}}
+{{wikzes
+ipedia|dab=weight (disambiguation)|weight}}
 
 ===Etymology===
 {{PIE root|en|weǵʰ}}
