t+sk:[[krvácať]] t+sk:[[rozpíjať sa]] t+sk:[[odvzdušniť]] t+sk:[[krvácanie]] ([[WT:EDIT|Assisted]]) <bleed#51502038>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -143,14 +143,17 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 * Bulgarian: {{t+|bg|обирам}}
 {{trans-mid}}
 * German: {{t+|de|ausbluten}}
+* Slovak: {{t|sk|krvácať}}
 {{trans-bottom}}
 
 {{trans-top|steadily lose}}
+* Slovak: {{t|sk|krvácať}}
 * Swedish: {{t+|sv|blöda}}
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|spread and stain}}
+* Slovak: {{t|sk|rozpíjať sa}}
 * Swedish: {{t+|sv|blöda}}
 {{trans-mid}}
 * Tagalog: {{t|tl|pagkalat}}, {{t|tl|pagtae}}
@@ -160,6 +163,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 * Czech: {{t|cs|odvzdušnit}}
 * Finnish: {{t+|fi|ilmata}}
 {{trans-mid}}
+* Slovak: {{t|sk|odvzdušniť}}
 * Spanish: {{t+|es|purgar}}
 * Swedish: {{t+|sv|lufta}}
 {{trans-bottom}}
@@ -178,6 +182,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 {{trans-mid}}
 * German: {{t+|de|Blutung}}
 * Persian: {{t+|fa|خونریزی|tr=xunrizi|sc=fa-Arab}}
+* Slovak: {{t+|sk|krvácanie}}
 {{trans-bottom}}
 
 {{trans-top|edge around layout}}
