t+gl:[[torto]] t+gl:[[encartado]] ([[WT:EDIT|Assisted]]) <bent#51588087>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -58,6 +58,7 @@ From {{m|en|bend}}.
 * Esperanto: {{t-needed|eo}}
 * Finnish: {{t+|fi|taipunut}}, {{t|fi|taittunut}}
 * French: {{t+|fr|courbé}}
+* Galician: {{t+|gl|torto}}, {{t|gl|encartado}}
 * Georgian: {{t|ka|გაღუნული|sc=Geor}}
 * German: {{t+|de|gebeugt}}
 * Greek:
