/*Middle English*/ <rot#51600332>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -6,8 +6,10 @@
 From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, become corrupted, ulcerate, putrefy}}, from {{inh|en|gem-pro|*rutōną||to rot}}, from {{der|en|ine-pro|*rewd-||to tear}}. Cognate with {{cog|fy|rotsje||to rot}}, {{cog|nl|rotten||to rot}}, {{cog|de|verrotten||to rot}} and regional {{m|de|rößen||to steep flax}}, {{cog|is|rotna||to rot}}. See {{l|en|rotten}}.
 
 ===Pronunciation===
+* {{a|UK}} {{IPA|/ɹɒt/|lang=en}}
 * {{a|GA}} {{IPA|[ɹɑt]|lang=en}}
 * {{audio|en-us-rot.ogg|Audio (US)|lang=en}}
+* {{a|AU|NZ}} {{IPA|/ɹɔt/|lang=en}}
 * {{rhymes|ɒt|lang=en}}
 
 ===Verb===
@@ -395,6 +397,31 @@ From {{inh|enm|ang|rotian}}.
 {{head|enm|verb}}
 
 # {{alt form|lang=enm|roten|t=to rot|id=to rot}}
+
+===Etymology 3===
+A {{back-formation|enm|roten|t=to rot|id=to rot|nocap=1|nodot=1}}.
+
+====Alternative forms====
+* {{alter|enm|rote|root|rotte|rott}}
+
+====Pronunciation====
+* {{IPA|/rɔt/|/rɔːt/|lang=enm}}
+
+====Noun====
+{{enm-noun|-}} 
+
+# [[rotting|Rotting]] or [[decomposition]]; the situation where something rots.
+# Any disease which causes [[decaying]] and [[decomposition]] in humans.
+# A disease that afflicts [[sheep]]; [[footrot]], the rot.
+
+=====Descendants=====
+* {{desc|en|rot}}
+
+=====References=====
+* {{R:MED Online|entry=rō̆t (n.) |id= MED37894 |accessdate=2019-02-24}}
+
+[[Category:enm:Diseases]]
+[[Category:enm:Nature]]
 
 ----
 
