--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -4,10 +4,14 @@
 ===Etymology===
 Borrowed from {{bor|nl|id|bahasa}}, eventually from {{der|nl|sa|भाषा||language}}.
 
+===Pronunciation===
+* {{IPA|lang=nl|/baː.ɦaː.saː/}}
+* {{hyphenation|lang=nl|ba|ha|sa}}
+
 ===Noun===
 {{nl-noun|n|-|-}}
 
-# {{lb|nl|colloquial}} [[Indonesian]] language.
+# {{lb|nl|colloquial|Netherlands}} [[Indonesian]] language.
 
 ----
 
