t+la:[[res]] ([[WT:EDIT|Assisted]]) <thing#51635459>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -241,6 +241,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Cebuano: {{t|ceb|butang}}
 {{trans-mid}}
 * Finnish: {{t+|fi|esine}}
+* Latin: {{t+|la|res|f}}
 {{trans-bottom}}
 
 {{trans-top|law: whatever can be owned}}
