--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -224,6 +224,8 @@ From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en
 #* {{RQ:Florio Montaigne Essayes|chapter=37|book=II|passage=I know there are some '''simples''', which in operation are moistening and some drying.}}
 #* {{rfdate||and other bibliographic particulars}} Sir {{w|W. Temple}}
 #*: What virtue is in this remedy lies in the naked '''simple''' itself as it comes over from the Indies.
+#* '''1922''', James Joyce, ''Ulysses'':
+#*: The first fellow that picked an herb to cure himself had a bit of pluck. '''Simples'''. Want to be careful.
 # {{lb|en|obsolete}} A term for a physician, derived from the medicinal term above.
 # {{lb|en|logic}} A simple or atomic [[proposition]].
 # {{lb|en|obsolete}} Something not mixed or compounded.
