--- a/en/t/tax value.775540.wikitext
+++ b/en/t/tax value.775540.wikitext
@@ -1,7 +1,7 @@
 ==English==
 {{rfv|en}}
 ===Noun===
-{{en-noun}} ''(abbreviation: [[TV]])''
+{{en-noun|~}} ''(abbreviation: [[TV]])''
 
 # The [[assess]]ed value of an [[asset]] from which the tax owing is computed.
 #* {{quote-book|lang=en|year=2006|title=Sanders Confectionery |author=Greg Tasker  |page=30 |ISBN=0738540447|passage=The crooked floors came in handy at tax assessment time. After seeing an orange roll across the slanting floor, the assessor lowered the building's '''tax value''', according to company lore.}}
