/* Related terms */ <quadruped#51669359>

--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -24,6 +24,7 @@ Borrowed from {{bor|en|fr|quadrupède}}, from {{etyl|frm|en}}, from {{etyl|la|en
 |quadrupedy}}
 
 ====Related terms====
+{{suffixsee|en|-ped}}
 {{rootsee|en|ped}}
 
 ====Translations====
