t+otw:[[gookoosh]] t+pot:[[kokosh]] t+mez:[[kōhkōs]] ([[WT:EDIT|Assisted]]) <pig#51677582>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -232,6 +232,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Maori: {{t|mi|poaka}}
 * Marathi: {{t|mr|डुकर|m}}
 * Mazanderani: {{t|mzn|خی|tr=xi}}
+* Menominee: {{t|mez|kōhkōs}}
 * Mi'kmaq: {{t|mic|gulgwi's|an}}
 * Moksha: {{t|mdf|тува}}
 * Mongolian: {{t+|mn|гахай}}
@@ -255,11 +256,13 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Old Turkic: {{t|otk|𐱃𐰆𐰭𐰆𐰕|tr=toŋuz}}
 * Oriya: {{t|or|ଘୁଷୁରିଛୁଆ}}
 * Ossetian: {{t|os|хуы}}
+* Ottawa: {{t|otw|gookoosh}}
 * Pashto: {{t+|ps|خنځير|m|tr=xanjír}}, {{t|ps|خوګ|m|tr=xug}}
 * Persian: {{t+|fa|خوک|tr=xuk}}
 * Plautdietsch: {{t+|pdt|Schwien|n}}
 * Polish: {{t+|pl|świnia|f}}
 * Portuguese: {{t+|pt|porco|m}}, {{t+|pt|suíno|m}}
+* Potawatomi: {{t|pot|kokosh}}
 * Punjabi: {{t|pa|ਸੂਰ|m}}
 * Quechua: {{t|qu|khuchi}}
 * Rapa Nui: {{t|rap|oru}}
