t+cr:[[kohkôs]] ([[WT:EDIT|Assisted]]) <pig#51677584>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -143,6 +143,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Chuvash: {{t|cv|сысна}}
 * Comox: {{t|coo|kʷašu}}
 * Cornish: {{t|kw|hogh|m}}, {{t|kw|mogh|p}}
+* Cree: {{t|cr|kohkôs}}
 * Czech: {{t+|cs|prase|n}}, {{t+|cs|vepř|m}}, {{t+|cs|svině|f}}
 * Da'a Kaili: {{t-check|kzf|vavu}} {{qualifier|Rai Kaili}}
 * Dalmatian: {{t|dlm|puarc|m}}
