--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -518,11 +518,15 @@ From {{inh|goh|gem-pro|*raudaz}} (compare {{cog|osx|rōd}}, {{cog|ang|rēad}}, {
 
 ====Descendants====
 * {{desc|gmh|rōt}}
+** {{desc|gsw|-}}
+**: Italian Walser: {{l|gsw|rot}}, {{l|gsw|rout}}, {{l|gsw|ròt}}, {{l|gsw|röts}}
+** {{desc|gmw-cfr|-}}
+**: {{desc|hrx|rod}}
 ** {{desc|de|rot}}
-*** {{desc|pdc|rot}}
-** {{desc|hrx|rod}}
 ** {{desc|lb|rout}}
-** {{desc|wym|rūt}}
+** {{desc|gmw-rfr|-}}
+**: {{desc|pdc|rot}}
+** {{desc|wym|rut}}
 ** {{desc|yi|רויט}}
 
 [[Category:goh:Colors]]
