--- a/en/o/oomycete.801875.wikitext
+++ b/en/o/oomycete.801875.wikitext
@@ -4,7 +4,7 @@
 {{wikipedia}}
 {{en-noun}}
 
-# {{lb|en|biology}} Any of a number of [[filamentous]] [[unicellular]] [[protist]]s of the class ''[[Oomycetes]]''; the [[water mold]]s.
+# {{lb|en|biology}} Any of a number of [[filamentous]] [[unicellular]] [[protist]]s of the class [[Oomycetes]]; the [[water mold]]s.
 
 ====Derived terms====
 * [[oomyceticidal]]
