Reverted edits by [[Special:Contributions/The Eternal Jew|The Eternal Jew]]. If you think this rollback is in error, please leave a message on my [[User talk:Surjection|talk page]]. <-mancer#51696606>

--- a/en/-/-mancer.855704.wikitext
+++ b/en/-/-mancer.855704.wikitext
@@ -8,7 +8,7 @@
 {{en-suffix}}
 
 # A practitioner of a specific type of [[divination]].
-# Incorrectly used as the name for a user of any specified type of [[magic]].
+# A user of a specified type of [[magic]].
 
 ====Derived terms====
 {{suffixsee|en}}
