/* Synonyms */ +thesaurus <in fits and starts#51698026>

--- a/en/i/in fits and starts.855551.wikitext
+++ b/en/i/in fits and starts.855551.wikitext
@@ -6,7 +6,7 @@
 # [[intermittently]], [[jerkily]]
 
 ====Synonyms====
-* {{l|es|fitfully}}
+* {{l|en|fitfully}}; see also [[Thesaurus:discontinuously]]
 
 ====Translations====
 {{trans-top}}
