--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -117,7 +117,7 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmēre}}.
 {{trans-top|destroy completely}}
 * Bulgarian: {{t+|bg|поглъщам}}
 * Chinese:
-*: Mandarin: {{t+|cmn|毁|sc=Hani}}, {{t+|cmn|毀|sc=Hani}}, {{t+|cmn|摧毀}}, {{t+|cmn|摧毁|tr=cuīhuǐ}}, {{t+|cmn|吞噬|tr=tūnshì}}
+*: Mandarin: {{t+|cmn|摧毀}}, {{t+|cmn|摧毁|tr=cuīhuǐ}}, {{t+|cmn|吞噬|tr=tūnshì}}
 * Dutch: {{t+|nl|verteren}}, {{t+|nl|consumeren}}
 * Finnish: {{t+|fi|tuhota}}, {{t+|fi|tuhoutua}}
 * French: {{t+|fr|consumer}}
