t+fi:[[kulua]] t+fi:[[riutua]] t+fi:[[kuluttaa]] ([[WT:EDIT|Assisted]]) <consume#51701287>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -136,7 +136,7 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmēre}}.
 *: Mandarin: {{t|cmn|[[日漸]][[衰弱]]}}, {{t|cmn|[[日渐]][[衰弱]]|tr=rìjiàn shuāiruò}}, {{t|cmn|[[日益]][[消瘦]]|tr=rìyì xiāoshòu}}
 {{trans-mid}}
 * Dutch: {{t-needed|nl}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|kulua}}, {{t+|fi|riutua}}
 {{trans-bottom}}
 
 {{trans-top|trade money for good or services}}
@@ -144,7 +144,7 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmēre}}.
 *: Mandarin: {{t+|cmn|消費}}, {{t+|cmn|消费|tr=xiāofèi}}
 {{trans-mid}}
 * Dutch: {{t-needed|nl}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|kuluttaa}}
 {{trans-bottom}}
 
 {{trans-top|absorb information}}
@@ -152,7 +152,7 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmēre}}.
 *: Mandarin: {{t+|cmn|看|tr=kàn}}, {{t+|cmn|閱讀}}, {{t+|cmn|阅读|tr=yuèdú}}, {{t+|cmn|吸收|tr=xīshōu}}
 {{trans-mid}}
 * Dutch: {{t-needed|nl}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|kuluttaa}}
 {{trans-bottom}}
 
 {{checktrans-top}}
