see also <whatevs#51733897>

--- a/en/w/whatevs.803477.wikitext
+++ b/en/w/whatevs.803477.wikitext
@@ -33,3 +33,7 @@ From {{suffix|whatever|s|lang=en}}
 
 ===References===
 * {{cite-book|author=Peckham, Aaron (compiler)|year=2005|title=Urban Dictionary: Fularious Street Slang Defined|location=Kansas City|publisher=Andrews McMeel|isbn=0-7407-5143-3|page=331}}
+
+=== See also ===
+
+* [[w/e]] {{qualifier|Internet slang}}
