/* English */switched US pronunciations around <advertisement#51948114>

--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -9,7 +9,7 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ədˈvɜːtɪsmənt/|lang=en}}, occasionally {{IPAchar|/ˈædvətaɪzmənt/|lang=en}}
-* {{a|US}} {{IPA|/ədˈvɝtɪzmənt/|lang=en}}, less often {{IPAchar|/ˈædvɚˌtaɪzmənt/|lang=en}}
+* {{a|US}} {{IPA|/ˈædvɚˌtaɪzmənt/|lang=en}}, less often {{IPAchar|/ədˈvɝtɪzmənt/|lang=en}}
 * {{audio|en-us-advertisement.ogg|Audio (US)|lang=en}}
 * {{a|NZ}} {{IPA|/ˈædvəˌtʌɪzmənt/|/ədˈvɜːtɪsmənt/|lang=en}}
 * {{a|Singapore}} {{IPA|/ˌædvəˈtɪzmənt/|lang=en}}
